Introduction of Allocationlayer, new Catalog/Snapshot Logic, PolyValues, new UI/UI-Logic and Various Refactorings (#464)