@@ -1,5 +1,5 @@
 /*
- * Copyright 2019-2022 The Polypheny Project
+ * Copyright 2019-2024 The Polypheny Project
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -30,33 +30,29 @@ import org.polypheny.db.algebra.AlgNode;
 import org.polypheny.db.algebra.AlgShuttle;
 import org.polypheny.db.algebra.AlgShuttleImpl;
 import org.polypheny.db.algebra.core.JoinAlgType;
-import org.polypheny.db.algebra.core.Modify;
 import org.polypheny.db.algebra.core.common.ConstraintEnforcer;
+import org.polypheny.db.algebra.core.relational.RelModify;
 import org.polypheny.db.algebra.exceptions.ConstraintViolationException;
-import org.polypheny.db.algebra.logical.relational.LogicalFilter;
-import org.polypheny.db.algebra.logical.relational.LogicalModify;
-import org.polypheny.db.algebra.logical.relational.LogicalScan;
+import org.polypheny.db.algebra.logical.relational.LogicalRelFilter;
+import org.polypheny.db.algebra.logical.relational.LogicalRelModify;
+import org.polypheny.db.algebra.logical.relational.LogicalRelScan;
 import org.polypheny.db.algebra.operators.OperatorName;
 import org.polypheny.db.catalog.Catalog;
-import org.polypheny.db.catalog.Catalog.ConstraintType;
-import org.polypheny.db.catalog.entity.CatalogConstraint;
-import org.polypheny.db.catalog.entity.CatalogForeignKey;
-import org.polypheny.db.catalog.entity.CatalogKey.EnforcementTime;
-import org.polypheny.db.catalog.entity.CatalogPrimaryKey;
-import org.polypheny.db.catalog.entity.CatalogSchema;
-import org.polypheny.db.catalog.entity.CatalogTable;
-import org.polypheny.db.catalog.exceptions.UnknownSchemaException;
-import org.polypheny.db.catalog.exceptions.UnknownTableException;
+import org.polypheny.db.catalog.entity.LogicalConstraint;
+import org.polypheny.db.catalog.entity.logical.LogicalForeignKey;
+import org.polypheny.db.catalog.entity.logical.LogicalKey.EnforcementTime;
+import org.polypheny.db.catalog.entity.logical.LogicalPrimaryKey;
+import org.polypheny.db.catalog.entity.logical.LogicalTable;
+import org.polypheny.db.catalog.exceptions.GenericRuntimeException;
+import org.polypheny.db.catalog.logistic.ConstraintType;
+import org.polypheny.db.catalog.snapshot.LogicalRelSnapshot;
 import org.polypheny.db.config.RuntimeConfig;
 import org.polypheny.db.languages.OperatorRegistry;
-import org.polypheny.db.plan.AlgOptCluster;
-import org.polypheny.db.plan.AlgOptSchema;
-import org.polypheny.db.plan.AlgOptTable;
+import org.polypheny.db.plan.AlgCluster;
 import org.polypheny.db.plan.AlgTraitSet;
 import org.polypheny.db.rex.RexBuilder;
-import org.polypheny.db.rex.RexInputRef;
+import org.polypheny.db.rex.RexIndexRef;
 import org.polypheny.db.rex.RexNode;
-import org.polypheny.db.schema.LogicalTable;
 import org.polypheny.db.tools.AlgBuilder;
 import org.polypheny.db.transaction.Statement;
 
@@ -74,7 +70,7 @@ public class LogicalConstraintEnforcer extends ConstraintEnforcer {
      * @param modify is the initial dml query, which modifies the entity
      * @param control is the control query, which tests if still all conditions are correct
      */
-    public LogicalConstraintEnforcer( AlgOptCluster cluster, AlgTraitSet traitSet, AlgNode modify, AlgNode control, List<Class<? extends Exception>> exceptionClasses, List<String> exceptionMessages ) {
+    public LogicalConstraintEnforcer( AlgCluster cluster, AlgTraitSet traitSet, AlgNode modify, AlgNode control, List<Class<? extends Exception>> exceptionClasses, List<String> exceptionMessages ) {
         super(
                 cluster,
                 traitSet,
@@ -88,37 +84,39 @@ public class LogicalConstraintEnforcer extends ConstraintEnforcer {
     private static EnforcementInformation getControl( AlgNode node, Statement statement ) {
         ModifyExtractor extractor = new ModifyExtractor();
         node.accept( extractor );
-        Modify modify = extractor.getModify();
+        RelModify<?> modify = extractor.getModify();
 
         if ( modify == null ) {
-            throw new RuntimeException( "The tree did no conform, while generating the constraint enforcement query!" );
+            throw new GenericRuntimeException( "The tree did no conform, while generating the constraint enforcement query!" );
         }
 
-        final CatalogTable table = getCatalogTable( modify );
+        final LogicalTable table = modify.entity.unwrap( LogicalTable.class ).orElseThrow();
 
         AlgBuilder builder = AlgBuilder.create( statement );
         final RexBuilder rexBuilder = modify.getCluster().getRexBuilder();
 
+        LogicalRelSnapshot snapshot = Catalog.getInstance().getSnapshot().rel();
+
         EnforcementTime enforcementTime = EnforcementTime.ON_QUERY;
-        final List<CatalogConstraint> constraints = new ArrayList<>( Catalog.getInstance().getConstraints( table.id ) )
+        final List<LogicalConstraint> constraints = new ArrayList<>( snapshot.getConstraints( table.id ) )
                 .stream()
                 .filter( f -> f.key.enforcementTime == enforcementTime )
                 .collect( Collectors.toCollection( ArrayList::new ) );
-        final List<CatalogForeignKey> foreignKeys = Catalog.getInstance()
+        final List<LogicalForeignKey> foreignKeys = snapshot
                 .getForeignKeys( table.id )
                 .stream()
                 .filter( f -> f.enforcementTime == enforcementTime )
-                .collect( Collectors.toList() );
-        final List<CatalogForeignKey> exportedKeys = Catalog.getInstance()
+                .toList();
+        final List<LogicalForeignKey> exportedKeys = snapshot
                 .getExportedKeys( table.id )
                 .stream()
                 .filter( f -> f.enforcementTime == enforcementTime )
-                .collect( Collectors.toList() );
+                .toList();
 
         // Turn primary key into an artificial unique constraint
-        CatalogPrimaryKey pk = Catalog.getInstance().getPrimaryKey( table.primaryKey );
+        LogicalPrimaryKey pk = snapshot.getPrimaryKey( table.primaryKey ).orElseThrow();
         if ( pk.enforcementTime == enforcementTime ) {
-            final CatalogConstraint pkc = new CatalogConstraint( 0L, pk.id, ConstraintType.UNIQUE, "PRIMARY KEY", pk );
+            final LogicalConstraint pkc = new LogicalConstraint( 0L, pk.id, ConstraintType.UNIQUE, "PRIMARY KEY", pk );
             constraints.add( pkc );
         }
 
@@ -132,14 +130,14 @@ public class LogicalConstraintEnforcer extends ConstraintEnforcer {
         List<String> errorMessages = new ArrayList<>();
         List<Class<? extends Exception>> errorClasses = new ArrayList<>();
         if ( (modify.isInsert() || modify.isMerge() || modify.isUpdate()) && RuntimeConfig.UNIQUE_CONSTRAINT_ENFORCEMENT.getBoolean() ) {
-            //builder.scan( table.getSchemaName(), table.name );
-            for ( CatalogConstraint constraint : constraints ) {
+            //builder.relScan( table.getNamespaceName(), table.name );
+            for ( LogicalConstraint constraint : constraints ) {
                 builder.clear();
-                final AlgNode scan = LogicalScan.create( modify.getCluster(), modify.getTable() );
+                final AlgNode scan = LogicalRelScan.create( modify.getCluster(), modify.getEntity() );
                 builder.push( scan );
                 // Enforce uniqueness between the already existing values and the new values
-                List<RexInputRef> keys = constraint.key
-                        .getColumnNames()
+                List<RexIndexRef> keys = constraint.key
+                        .getFieldNames()
                         .stream()
                         .map( builder::field )
                         .collect( Collectors.toList() );
@@ -164,25 +162,24 @@ public class LogicalConstraintEnforcer extends ConstraintEnforcer {
         //  Enforce FOREIGN KEY constraints in INSERT operations
         //
         if ( RuntimeConfig.FOREIGN_KEY_ENFORCEMENT.getBoolean() ) {
-            for ( final CatalogForeignKey foreignKey : Stream.concat( foreignKeys.stream(), exportedKeys.stream() ).collect( Collectors.toList() ) ) {
+            for ( final LogicalForeignKey foreignKey : Stream.concat( foreignKeys.stream(), exportedKeys.stream() ).toList() ) {
                 builder.clear();
-                final AlgOptSchema algOptSchema = modify.getCatalogReader();
-                final AlgOptTable scanOptTable = algOptSchema.getTableForMember( Collections.singletonList( foreignKey.getTableName() ) );
-                final AlgOptTable refOptTable = algOptSchema.getTableForMember( Collections.singletonList( foreignKey.getReferencedKeyTableName() ) );
-                final AlgNode scan = LogicalScan.create( modify.getCluster(), scanOptTable );
-                final LogicalScan ref = LogicalScan.create( modify.getCluster(), refOptTable );
+                final LogicalTable scanOptTable = snapshot.getTable( foreignKey.entityId ).orElseThrow();
+                final LogicalTable refOptTable = snapshot.getTable( foreignKey.referencedKeyEntityId ).orElseThrow();
+                final AlgNode scan = LogicalRelScan.create( modify.getCluster(), scanOptTable );
+                final LogicalRelScan ref = LogicalRelScan.create( modify.getCluster(), refOptTable );
 
                 builder.push( scan );
-                builder.project( foreignKey.getColumnNames().stream().map( builder::field ).collect( Collectors.toList() ) );
+                builder.project( foreignKey.getFieldNames().stream().map( builder::field ).collect( Collectors.toList() ) );
 
                 builder.push( ref );
-                builder.project( foreignKey.getReferencedKeyColumnNames().stream().map( builder::field ).collect( Collectors.toList() ) );
+                builder.project( foreignKey.getReferencedKeyFieldNames().stream().map( builder::field ).collect( Collectors.toList() ) );
 
                 RexNode joinCondition = rexBuilder.makeLiteral( true );
 
-                for ( int i = 0; i < foreignKey.getColumnNames().size(); i++ ) {
-                    final String column = foreignKey.getColumnNames().get( i );
-                    final String referencedColumn = foreignKey.getReferencedKeyColumnNames().get( i );
+                for ( int i = 0; i < foreignKey.getFieldNames().size(); i++ ) {
+                    final String column = foreignKey.getFieldNames().get( i );
+                    final String referencedColumn = foreignKey.getReferencedKeyFieldNames().get( i );
                     RexNode joinComparison = rexBuilder.makeCall(
                             OperatorRegistry.get( OperatorName.EQUALS ),
                             builder.field( 2, 1, referencedColumn ),
@@ -193,8 +190,8 @@ public class LogicalConstraintEnforcer extends ConstraintEnforcer {
 
                 final AlgNode join = builder.join( JoinAlgType.LEFT, joinCondition ).build();
                 //builder.project( builder.fields() );
-                builder.push( LogicalFilter.create( join, rexBuilder.makeCall( OperatorRegistry.get( OperatorName.IS_NULL ), rexBuilder.makeInputRef( join, join.getRowType().getFieldCount() - 1 ) ) ) );
-                builder.project( builder.field( foreignKey.getColumnNames().get( 0 ) ) );
+                builder.push( LogicalRelFilter.create( join, rexBuilder.makeCall( OperatorRegistry.get( OperatorName.IS_NULL ), rexBuilder.makeInputRef( join, join.getTupleType().getFieldCount() - 1 ) ) ) );
+                builder.project( builder.field( foreignKey.getFieldNames().get( 0 ) ) );
                 builder.rename( Collections.singletonList( "count$" + pos ) );
                 builder.projectPlus( builder.literal( pos ) );
 
@@ -206,7 +203,7 @@ public class LogicalConstraintEnforcer extends ConstraintEnforcer {
             }
         }
 
-        if ( filters.size() == 0 ) {
+        if ( filters.isEmpty() ) {
             constrainedNode = null;
         } else if ( filters.size() == 1 ) {
             constrainedNode = filters.poll();
@@ -223,29 +220,30 @@ public class LogicalConstraintEnforcer extends ConstraintEnforcer {
     }
 
 
-    public static EnforcementInformation getControl( CatalogTable table, Statement statement, EnforcementTime enforcementTime ) {
+    public static EnforcementInformation getControl( LogicalTable table, Statement statement, EnforcementTime enforcementTime ) {
 
         AlgBuilder builder = AlgBuilder.create( statement );
         final RexBuilder rexBuilder = builder.getRexBuilder();
+        LogicalRelSnapshot snapshot = Catalog.getInstance().getSnapshot().rel();
 
-        final List<CatalogConstraint> constraints = Catalog.getInstance()
+        final List<LogicalConstraint> constraints = snapshot
                 .getConstraints( table.id )
                 .stream()
                 .filter( c -> c.key.enforcementTime == enforcementTime )
                 .collect( Collectors.toCollection( ArrayList::new ) );
-        final List<CatalogForeignKey> foreignKeys = Catalog.getInstance().getForeignKeys( table.id )
+        final List<LogicalForeignKey> foreignKeys = snapshot.getForeignKeys( table.id )
                 .stream()
                 .filter( c -> c.enforcementTime == enforcementTime )
                 .collect( Collectors.toCollection( ArrayList::new ) );
-        final List<CatalogForeignKey> exportedKeys = Catalog.getInstance().getExportedKeys( table.id )
+        final List<LogicalForeignKey> exportedKeys = snapshot.getExportedKeys( table.id )
                 .stream()
                 .filter( c -> c.enforcementTime == enforcementTime )
                 .collect( Collectors.toCollection( ArrayList::new ) );
 
         // Turn primary key into an artificial unique constraint
-        CatalogPrimaryKey pk = Catalog.getInstance().getPrimaryKey( table.primaryKey );
+        LogicalPrimaryKey pk = snapshot.getPrimaryKey( table.primaryKey ).orElseThrow();
         if ( pk.enforcementTime == enforcementTime ) {
-            final CatalogConstraint pkc = new CatalogConstraint( 0L, pk.id, ConstraintType.UNIQUE, "PRIMARY KEY", pk );
+            final LogicalConstraint pkc = new LogicalConstraint( 0L, pk.id, ConstraintType.UNIQUE, "PRIMARY KEY", pk );
             constraints.add( pkc );
         }
 
@@ -259,13 +257,13 @@ public class LogicalConstraintEnforcer extends ConstraintEnforcer {
         List<String> errorMessages = new ArrayList<>();
         List<Class<? extends Exception>> errorClasses = new ArrayList<>();
         if ( RuntimeConfig.UNIQUE_CONSTRAINT_ENFORCEMENT.getBoolean() ) {
-            //builder.scan( table.getSchemaName(), table.name );
-            for ( CatalogConstraint constraint : constraints ) {
+            //builder.relScan( table.getNamespaceName(), table.name );
+            for ( LogicalConstraint constraint : constraints ) {
                 builder.clear();
-                builder.scan( table.getNamespaceName(), table.name );//LogicalTableScan.create( modify.getCluster(), modify.getTable() );
+                builder.relScan( table );//LogicalTableScan.create( modify.getCluster(), modify.getTable() );
                 // Enforce uniqueness between the already existing values and the new values
-                List<RexInputRef> keys = constraint.key
-                        .getColumnNames()
+                List<RexIndexRef> keys = constraint.key
+                        .getFieldNames()
                         .stream()
                         .map( builder::field )
                         .collect( Collectors.toList() );
@@ -289,25 +287,23 @@ public class LogicalConstraintEnforcer extends ConstraintEnforcer {
         //  Enforce FOREIGN KEY constraints in INSERT operations
         //
         if ( RuntimeConfig.FOREIGN_KEY_ENFORCEMENT.getBoolean() ) {
-            for ( final CatalogForeignKey foreignKey : Stream.concat( foreignKeys.stream(), exportedKeys.stream() ).collect( Collectors.toList() ) ) {
+            for ( final LogicalForeignKey foreignKey : Stream.concat( foreignKeys.stream(), exportedKeys.stream() ).toList() ) {
                 builder.clear();
-                //final AlgOptSchema algOptSchema = modify.getCatalogReader();
-                //final AlgOptTable scanOptTable = algOptSchema.getTableForMember( Collections.singletonList( foreignKey.getTableName() ) );
-                //final AlgOptTable refOptTable = algOptSchema.getTableForMember( Collections.singletonList( foreignKey.getReferencedKeyTableName() ) );
-                final AlgNode scan = builder.scan( foreignKey.getSchemaName(), foreignKey.getTableName() ).build();//LogicalTableScan.create( modify.getCluster(), scanOptTable );
-                final AlgNode ref = builder.scan( foreignKey.getSchemaName(), foreignKey.getReferencedKeyTableName() ).build();
+
+                final AlgNode scan = builder.relScan( foreignKey.getSchemaName(), foreignKey.getTableName() ).build();
+                final AlgNode ref = builder.relScan( foreignKey.getSchemaName(), foreignKey.getReferencedKeyEntityName() ).build();
 
                 builder.push( scan );
-                builder.project( foreignKey.getColumnNames().stream().map( builder::field ).collect( Collectors.toList() ) );
+                builder.project( foreignKey.getFieldNames().stream().map( builder::field ).collect( Collectors.toList() ) );
 
                 builder.push( ref );
-                builder.project( foreignKey.getReferencedKeyColumnNames().stream().map( builder::field ).collect( Collectors.toList() ) );
+                builder.project( foreignKey.getReferencedKeyFieldNames().stream().map( builder::field ).collect( Collectors.toList() ) );
 
                 RexNode joinCondition = rexBuilder.makeLiteral( true );
 
-                for ( int i = 0; i < foreignKey.getColumnNames().size(); i++ ) {
-                    final String column = foreignKey.getColumnNames().get( i );
-                    final String referencedColumn = foreignKey.getReferencedKeyColumnNames().get( i );
+                for ( int i = 0; i < foreignKey.getFieldNames().size(); i++ ) {
+                    final String column = foreignKey.getFieldNames().get( i );
+                    final String referencedColumn = foreignKey.getReferencedKeyFieldNames().get( i );
                     RexNode joinComparison = rexBuilder.makeCall(
                             OperatorRegistry.get( OperatorName.EQUALS ),
                             builder.field( 2, 1, referencedColumn ),
@@ -318,8 +314,8 @@ public class LogicalConstraintEnforcer extends ConstraintEnforcer {
 
                 final AlgNode join = builder.join( JoinAlgType.LEFT, joinCondition ).build();
                 //builder.project( builder.fields() );
-                builder.push( LogicalFilter.create( join, rexBuilder.makeCall( OperatorRegistry.get( OperatorName.IS_NULL ), rexBuilder.makeInputRef( join, join.getRowType().getFieldCount() - 1 ) ) ) );
-                builder.project( builder.field( foreignKey.getColumnNames().get( 0 ) ) );
+                builder.push( LogicalRelFilter.create( join, rexBuilder.makeCall( OperatorRegistry.get( OperatorName.IS_NULL ), rexBuilder.makeInputRef( join, join.getTupleType().getFieldCount() - 1 ) ) ) );
+                builder.project( builder.field( foreignKey.getFieldNames().get( 0 ) ) );
                 builder.rename( Collections.singletonList( "count$" + pos ) );
                 builder.projectPlus( builder.literal( pos ) );
 
@@ -330,7 +326,7 @@ public class LogicalConstraintEnforcer extends ConstraintEnforcer {
             }
         }
 
-        if ( filters.size() == 0 ) {
+        if ( filters.isEmpty() ) {
             constrainedNode = null;
         } else if ( filters.size() == 1 ) {
             constrainedNode = filters.poll();
@@ -374,28 +370,12 @@ public class LogicalConstraintEnforcer extends ConstraintEnforcer {
 
     public static AlgNode create( AlgNode node, Statement statement ) {
         EnforcementInformation information = getControl( node, statement );
-        if ( information.getControl() == null ) {
+        if ( information.control() == null ) {
             // there is no constraint, which is enforced {@code ON QUERY} so we return the original
             return node;
         } else {
-            return new LogicalConstraintEnforcer( node.getCluster(), node.getTraitSet(), node, information.getControl(), information.getErrorClasses(), information.getErrorMessages() );
+            return new LogicalConstraintEnforcer( node.getCluster(), node.getTraitSet(), node, information.control(), information.errorClasses(), information.errorMessages() );
         }
-    }
-
-
-    public static String getEntityName( Modify root, CatalogSchema schema ) {
-        String tableName;
-        if ( root.getTable().getQualifiedName().size() == 1 ) { // tableName
-            tableName = root.getTable().getQualifiedName().get( 0 );
-        } else if ( root.getTable().getQualifiedName().size() == 2 ) { // schemaName.tableName
-            if ( !schema.name.equalsIgnoreCase( root.getTable().getQualifiedName().get( 0 ) ) ) {
-                throw new RuntimeException( "Schema name does not match expected schema name: " + root.getTable().getQualifiedName().get( 0 ) );
-            }
-            tableName = root.getTable().getQualifiedName().get( 1 );
-        } else {
-            throw new RuntimeException( "Invalid table name: " + root.getTable().getQualifiedName() );
-        }
-        return tableName;
     }
 
 
@@ -417,43 +397,7 @@ public class LogicalConstraintEnforcer extends ConstraintEnforcer {
     }
 
 
-    public static CatalogTable getCatalogTable( Modify modify ) {
-        Catalog catalog = Catalog.getInstance();
-        String schemaName;
-        if ( modify.getTable().getTable() instanceof LogicalTable ) {
-            schemaName = ((LogicalTable) modify.getTable().getTable()).getLogicalSchemaName();
-        } else if ( modify.getTable().getQualifiedName().size() == 2 ) {
-            schemaName = modify.getTable().getQualifiedName().get( 0 );
-        } else if ( modify.getTable().getQualifiedName().size() == 3 ) {
-            schemaName = modify.getTable().getQualifiedName().get( 1 );
-        } else {
-            throw new RuntimeException( "The schema was not provided correctly!" );
-        }
-        final CatalogSchema schema;
-        try {
-            schema = catalog.getSchema( Catalog.defaultDatabaseId, schemaName );
-        } catch ( UnknownSchemaException e ) {
-            throw new RuntimeException( "The schema was not provided correctly!" );
-        }
-
-        try {
-            String tableName = getEntityName( modify, schema );
-            return catalog.getTable( schema.id, tableName );
-
-        } catch ( UnknownTableException e ) {
-            log.error( "Caught exception", e );
-            throw new RuntimeException( "The table was not found in the catalog!" );
-        }
-    }
-
-
-    @Getter
-    public static class EnforcementInformation {
-
-        private final AlgNode control;
-        private final List<Class<? extends Exception>> errorClasses;
-        private final List<String> errorMessages;
-
+    public record EnforcementInformation(AlgNode control, List<Class<? extends Exception>> errorClasses, List<String> errorMessages) {
 
         /**
          * {@link EnforcementInformation} holds all needed information regarding a constraint.
@@ -463,23 +407,20 @@ public class LogicalConstraintEnforcer extends ConstraintEnforcer {
          * @param errorClasses Class used to throw if constraint is violated
          * @param errorMessages messages, which describes validated constraint in case of validation
          */
-        public EnforcementInformation( AlgNode control, List<Class<? extends Exception>> errorClasses, List<String> errorMessages ) {
-            this.control = control;
-            this.errorClasses = errorClasses;
-            this.errorMessages = errorMessages;
+        public EnforcementInformation {
         }
 
     }
 
 
+    @Getter
     public static class ModifyExtractor extends AlgShuttleImpl {
 
-        @Getter
-        private LogicalModify modify;
+        private LogicalRelModify modify;
 
 
         @Override
-        public AlgNode visit( LogicalModify modify ) {
+        public AlgNode visit( LogicalRelModify modify ) {
             this.modify = modify;
             return modify;
         }
