@@ -1,5 +1,5 @@
 /*
- * Copyright 2019-2020 The Polypheny Project
+ * Copyright 2019-2024 The Polypheny Project
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -38,14 +38,15 @@ import static org.hamcrest.CoreMatchers.anyOf;
 import static org.hamcrest.CoreMatchers.equalTo;
 import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.CoreMatchers.sameInstance;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotSame;
-import static org.junit.Assert.assertSame;
-import static org.junit.Assert.assertThat;
-import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotSame;
+import static org.junit.jupiter.api.Assertions.assertSame;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.fail;
 
+import com.google.common.collect.ImmutableList;
 import com.google.common.collect.Iterables;
 import java.nio.LongBuffer;
 import java.util.Arrays;
@@ -55,8 +56,7 @@ import java.util.List;
 import java.util.Set;
 import java.util.SortedMap;
 import java.util.TreeMap;
-import org.junit.Assert;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 import org.polypheny.db.runtime.Utilities;
 import org.polypheny.db.util.ImmutableBitSet.Builder;
 
@@ -87,7 +87,7 @@ public class ImmutableBitSetTest {
     private void assertToIterBitSet( String expected, ImmutableBitSet bitSet ) {
         StringBuilder buf = new StringBuilder();
         for ( int i : bitSet ) {
-            if ( buf.length() > 0 ) {
+            if ( !buf.isEmpty() ) {
                 buf.append( ", " );
             }
             buf.append( i );
@@ -102,10 +102,10 @@ public class ImmutableBitSetTest {
     @Test
     public void testToList() {
         assertThat( ImmutableBitSet.of().toList(), equalTo( Collections.<Integer>emptyList() ) );
-        assertThat( ImmutableBitSet.of( 5 ).toList(), equalTo( Arrays.asList( 5 ) ) );
+        assertThat( ImmutableBitSet.of( 5 ).toList(), equalTo( List.of( 5 ) ) );
         assertThat( ImmutableBitSet.of( 3, 5 ).toList(), equalTo( Arrays.asList( 3, 5 ) ) );
-        assertThat( ImmutableBitSet.of( 63 ).toList(), equalTo( Arrays.asList( 63 ) ) );
-        assertThat( ImmutableBitSet.of( 64 ).toList(), equalTo( Arrays.asList( 64 ) ) );
+        assertThat( ImmutableBitSet.of( 63 ).toList(), equalTo( List.of( 63 ) ) );
+        assertThat( ImmutableBitSet.of( 64 ).toList(), equalTo( List.of( 64 ) ) );
         assertThat( ImmutableBitSet.of( 3, 63 ).toList(), equalTo( Arrays.asList( 3, 63 ) ) );
         assertThat( ImmutableBitSet.of( 3, 64 ).toList(), equalTo( Arrays.asList( 3, 64 ) ) );
         assertThat( ImmutableBitSet.of( 0, 4, 2 ).toList(), equalTo( Arrays.asList( 0, 2, 4 ) ) );
@@ -157,7 +157,7 @@ public class ImmutableBitSetTest {
                 if ( c == 0 ) {
                     assertTrue( i == j || i == 3 && j == 4 || i == 4 && j == 3 );
                 } else {
-                    Assert.assertEquals( c, Utilities.compare( i, j ) );
+                    assertEquals( c, Utilities.compare( i, j ) );
                 }
                 assertEquals( c == 0, set0.equals( set1 ) );
                 assertEquals( c == 0, set1.equals( set0 ) );
@@ -296,14 +296,14 @@ public class ImmutableBitSetTest {
 
 
     /**
-     * Tests the method {@link ImmutableBitSet#of(ImmutableIntList)}.
+     * Tests the method {@link ImmutableBitSet#of()}.
      */
     @Test
     public void testBitSetOfImmutableIntList() {
-        ImmutableIntList list = ImmutableIntList.of();
+        ImmutableList<Integer> list = ImmutableList.of();
         assertThat( ImmutableBitSet.of( list ), equalTo( ImmutableBitSet.of() ) );
 
-        list = ImmutableIntList.of( 2, 70, 5, 0 );
+        list = ImmutableList.of( 2, 70, 5, 0 );
         assertThat( ImmutableBitSet.of( list ), equalTo( ImmutableBitSet.of( 0, 2, 5, 70 ) ) );
     }
 
