@@ -1,5 +1,5 @@
 /*
- * Copyright 2019-2022 The Polypheny Project
+ * Copyright 2019-2024 The Polypheny Project
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,7 +19,6 @@ package org.polypheny.db.monitoring.events.analyzer;
 
 import java.util.Collections;
 import java.util.Set;
-import java.util.stream.Collectors;
 import lombok.extern.slf4j.Slf4j;
 import org.polypheny.db.monitoring.events.DmlEvent;
 import org.polypheny.db.monitoring.events.metrics.DmlDataPoint;
@@ -32,14 +31,14 @@ public class DmlEventAnalyzer {
         DmlDataPoint metric = DmlDataPoint
                 .builder()
                 .Id( dmlEvent.getId() )
-                .tables( dmlEvent.getLogicalQueryInformation().getTables() )
+                .tables( dmlEvent.getLogicalQueryInformation().getAllScannedEntities() )
                 .fieldNames( dmlEvent.getFieldNames() )
                 .executionTime( dmlEvent.getExecutionTime() )
                 .rowCount( dmlEvent.getRowCount() )
                 .isSubQuery( dmlEvent.isSubQuery() )
                 .isCommitted( dmlEvent.isCommitted() )
                 .recordedTimestamp( dmlEvent.getRecordedTimestamp() )
-                .queryClass( dmlEvent.getLogicalQueryInformation().getQueryClass() )
+                .queryClass( dmlEvent.getLogicalQueryInformation().getQueryHash() )
                 .monitoringType( dmlEvent.getMonitoringType() )
                 .physicalQueryClass( dmlEvent.getPhysicalQueryClass() )
                 .availableColumnsWithTable( dmlEvent.getLogicalQueryInformation().getAvailableColumnsWithTable() )
@@ -47,7 +46,7 @@ public class DmlEventAnalyzer {
                 .build();
 
         if ( dmlEvent.getAccessedPartitions() != null ) {
-            metric.setAccessedPartitions( dmlEvent.getAccessedPartitions().values().stream().flatMap( Set::stream ).collect( Collectors.toList() ) );
+            metric.setAccessedPartitions( dmlEvent.getAccessedPartitions().values().stream().flatMap( Set::stream ).toList() );
         } else {
             metric.setAccessedPartitions( Collections.emptyList() );
         }
