@@ -1,5 +1,5 @@
 /*
- * Copyright 2019-2023 The Polypheny Project
+ * Copyright 2019-2024 The Polypheny Project
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -23,25 +23,23 @@ import java.util.stream.Collectors;
 import lombok.Getter;
 import lombok.extern.slf4j.Slf4j;
 import org.polypheny.db.PolyImplementation;
+import org.polypheny.db.ResultIterator;
 import org.polypheny.db.algebra.AlgNode;
 import org.polypheny.db.algebra.AlgRoot;
 import org.polypheny.db.algebra.constant.Kind;
 import org.polypheny.db.catalog.Catalog;
-import org.polypheny.db.catalog.Catalog.EntityType;
-import org.polypheny.db.catalog.Catalog.NamespaceType;
-import org.polypheny.db.catalog.entity.CatalogColumn;
-import org.polypheny.db.catalog.entity.CatalogSchema;
-import org.polypheny.db.catalog.entity.CatalogTable;
-import org.polypheny.db.catalog.exceptions.UnknownDatabaseException;
-import org.polypheny.db.catalog.exceptions.UnknownSchemaException;
-import org.polypheny.db.catalog.exceptions.UnknownUserException;
+import org.polypheny.db.catalog.entity.logical.LogicalTable;
+import org.polypheny.db.catalog.logistic.DataModel;
+import org.polypheny.db.catalog.logistic.EntityType;
+import org.polypheny.db.catalog.logistic.Pattern;
+import org.polypheny.db.catalog.snapshot.Snapshot;
 import org.polypheny.db.config.RuntimeConfig;
 import org.polypheny.db.iface.Authenticator;
 import org.polypheny.db.transaction.Statement;
 import org.polypheny.db.transaction.Transaction;
-import org.polypheny.db.transaction.Transaction.MultimediaFlavor;
 import org.polypheny.db.transaction.TransactionException;
 import org.polypheny.db.transaction.TransactionManager;
+import org.polypheny.db.type.entity.PolyValue;
 
 
 @Slf4j
@@ -49,23 +47,19 @@ public class StatisticQueryProcessor {
 
     @Getter
     private final TransactionManager transactionManager;
-    private final long databaseId;
-    private final long userId;
 
 
     /**
      * LowCostQueries can be used to retrieve short answered queries
      * Idea is to expose a selected list of sql operations with a small list of results and not impact performance
      */
-    public StatisticQueryProcessor( final TransactionManager transactionManager, long userId, long databaseId ) {
+    public StatisticQueryProcessor( final TransactionManager transactionManager ) {
         this.transactionManager = transactionManager;
-        this.databaseId = databaseId;
-        this.userId = userId;
     }
 
 
     public StatisticQueryProcessor( TransactionManager transactionManager, Authenticator authenticator ) {
-        this( transactionManager, Catalog.defaultUserId, Catalog.defaultDatabaseId );
+        this( transactionManager );
     }
 
 
@@ -84,56 +78,18 @@ public class StatisticQueryProcessor {
 
 
     /**
-     * Method to get all schemas, tables, and their columns in a database
-     */
-    public List<List<String>> getSchemaTree() {
-        Catalog catalog = Catalog.getInstance();
-        List<List<String>> result = new ArrayList<>();
-        List<String> schemaTree = new ArrayList<>();
-        List<CatalogSchema> schemas = catalog.getSchemas( databaseId, null );
-        for ( CatalogSchema schema : schemas ) {
-            List<String> tables = new ArrayList<>();
-            List<CatalogTable> childTables = catalog.getTables( schema.id, null );
-            for ( CatalogTable childTable : childTables ) {
-                List<String> table = new ArrayList<>();
-                List<CatalogColumn> childColumns = catalog.getColumns( childTable.id );
-                for ( CatalogColumn catalogColumn : childColumns ) {
-                    table.add( schema.name + "." + childTable.name + "." + catalogColumn.name );
-                }
-                if ( childTable.entityType == EntityType.ENTITY ) {
-                    tables.addAll( table );
-                }
-            }
-            schemaTree.addAll( tables );
-            result.add( schemaTree );
-        }
-        return result;
-    }
-
-
-    /**
      * Gets all columns in the database
      *
      * @return all the columns
      */
     public List<QueryResult> getAllColumns() {
-        Catalog catalog = Catalog.getInstance();
-        List<CatalogColumn> catalogColumns = catalog.getColumns(
-                        null,
-                        null,
-                        null,
-                        null )
+        Snapshot snapshot = Catalog.getInstance().getSnapshot();
+        return snapshot.getNamespaces( null )
                 .stream()
-                .filter( c -> c.getNamespaceType() == NamespaceType.RELATIONAL )
-                .collect( Collectors.toList() );
-        List<QueryResult> allColumns = new ArrayList<>();
-
-        for ( CatalogColumn catalogColumn : catalogColumns ) {
-            if ( catalog.getTable( catalogColumn.tableId ).entityType != EntityType.VIEW ) {
-                allColumns.add( new QueryResult( catalogColumn.schemaId, catalogColumn.tableId, catalogColumn.id, catalogColumn.type ) );
-            }
-        }
-        return allColumns;
+                .filter( n -> n.dataModel == DataModel.RELATIONAL )
+                .flatMap( n -> snapshot.rel().getTables( Pattern.of( n.name ), null ).stream().filter( t -> t.entityType != EntityType.VIEW ).flatMap( t -> snapshot.rel().getColumns( t.id ).stream() ) )
+                .map( QueryResult::fromCatalogColumn )
+                .toList();
     }
 
 
@@ -142,20 +98,10 @@ public class StatisticQueryProcessor {
      *
      * @return all the tables ids
      */
-    public List<CatalogTable> getAllTable() {
-        Catalog catalog = Catalog.getInstance();
-        List<CatalogTable> catalogEntities = catalog.getTables(
-                null,
-                null,
-                null );
-        List<CatalogTable> allTables = new ArrayList<>();
-
-        for ( CatalogTable catalogTable : catalogEntities ) {
-            if ( catalogTable.entityType != EntityType.VIEW ) {
-                allTables.add( catalogTable );
-            }
-        }
-        return allTables;
+    public List<LogicalTable> getAllRelEntites() {
+        Snapshot snapshot = Catalog.getInstance().getSnapshot();
+        return snapshot.getNamespaces( null ).stream().filter( n -> n.dataModel == DataModel.RELATIONAL )
+                .flatMap( n -> snapshot.rel().getTables( Pattern.of( n.name ), null ).stream().filter( t -> t.entityType != EntityType.VIEW ) ).collect( Collectors.toList() );
     }
 
 
@@ -165,10 +111,8 @@ public class StatisticQueryProcessor {
      * @return all columns
      */
     public List<QueryResult> getAllColumns( Long tableId ) {
-        Catalog catalog = Catalog.getInstance();
-        List<QueryResult> columns = new ArrayList<>();
-        catalog.getColumns( tableId ).forEach( c -> columns.add( QueryResult.fromCatalogColumn( c ) ) );
-        return columns;
+        Snapshot snapshot = Catalog.getInstance().getSnapshot();
+        return snapshot.getNamespaces( null ).stream().flatMap( n -> snapshot.rel().getColumns( tableId ).stream() ).map( QueryResult::fromCatalogColumn ).collect( Collectors.toList() );
     }
 
 
@@ -201,48 +145,36 @@ public class StatisticQueryProcessor {
         return result;
     }
 
-
-    private Transaction getTransaction() {
-        try {
-            return transactionManager.startTransaction( userId, databaseId, false, "Statistics", MultimediaFlavor.FILE );
-        } catch ( UnknownUserException | UnknownDatabaseException | UnknownSchemaException e ) {
-            throw new RuntimeException( "Error while starting transaction", e );
-        }
-    }
-
     // -----------------------------------------------------------------------
     //                                Helper
     // -----------------------------------------------------------------------
 
 
     private StatisticResult executeColStat( Statement statement, AlgNode node, QueryResult queryResult ) throws QueryExecutionException {
-        PolyImplementation result;
-        List<List<Object>> rows;
+        PolyImplementation implementation;
+        List<List<PolyValue>> rows;
 
         try {
-            result = statement.getQueryProcessor().prepareQuery( AlgRoot.of( node, Kind.SELECT ), node.getRowType(), false );
-            rows = result.getRows( statement, getPageSize() );
+            implementation = statement.getQueryProcessor().prepareQuery( AlgRoot.of( node, Kind.SELECT ), node.getTupleType(), false );
+            ResultIterator iterator = implementation.execute( statement, getPageSize() );
+            rows = iterator.getNextBatch();
+            iterator.close();
         } catch ( Throwable t ) {
             throw new QueryExecutionException( t );
         }
 
-        List<Comparable<?>[]> data = new ArrayList<>();
-        for ( List<Object> row : rows ) {
-            Comparable<?>[] temp = new Comparable<?>[row.size()];
+        List<PolyValue[]> data = new ArrayList<>();
+        for ( List<PolyValue> row : rows ) {
+            PolyValue[] temp = new PolyValue[row.size()];
             int counter = 0;
-            for ( Object o : row ) {
-                if ( o == null ) {
-                    temp[counter] = null;
-                } else {
-                    assert o instanceof Comparable<?>;
-                    temp[counter] = (Comparable<?>) o;
-                }
+            for ( PolyValue o : row ) {
+                temp[counter] = o;
                 counter++;
             }
             data.add( temp );
         }
 
-        Comparable<?>[][] d = data.toArray( new Comparable<?>[0][] );
+        PolyValue[][] d = data.toArray( new PolyValue[0][] );
 
         return new StatisticResult( queryResult, d );
     }
@@ -253,11 +185,6 @@ public class StatisticQueryProcessor {
      */
     private int getPageSize() {
         return RuntimeConfig.UI_PAGE_SIZE.getInteger();
-    }
-
-
-    public static String buildQualifiedName( String... strings ) {
-        return "\"" + String.join( "\".\"", strings ) + "\"";
     }
 
 
