@@ -1,5 +1,5 @@
 /*
- * Copyright 2019-2023 The Polypheny Project
+ * Copyright 2019-2024 The Polypheny Project
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,9 +19,9 @@ package org.polypheny.db.cypher.expression;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Locale;
-import java.util.stream.Collectors;
 import lombok.Getter;
 import org.polypheny.db.algebra.operators.OperatorName;
+import org.polypheny.db.catalog.exceptions.GenericRuntimeException;
 import org.polypheny.db.languages.ParserPos;
 
 @Getter
@@ -32,7 +32,7 @@ public class CypherFunctionInvocation extends CypherExpression {
     private final boolean distinct;
     private final List<CypherExpression> arguments;
 
-    private static final List<String> operatorNames = Arrays.stream( OperatorName.values() ).map( Enum::name ).collect( Collectors.toList() );
+    private static final List<String> operatorNames = Arrays.stream( OperatorName.values() ).map( Enum::name ).toList();
     private final OperatorName op;
 
 
@@ -43,7 +43,7 @@ public class CypherFunctionInvocation extends CypherExpression {
         if ( operatorNames.contains( image.toUpperCase( Locale.ROOT ) ) ) {
             this.op = OperatorName.valueOf( image.toUpperCase( Locale.ROOT ) );
         } else {
-            throw new RuntimeException( "Used function is not supported!" );
+            throw new GenericRuntimeException( "Used function is not supported!" );
         }
         this.distinct = distinct;
         this.arguments = arguments;
