@@ -1,5 +1,5 @@
 /*
- * Copyright 2019-2023 The Polypheny Project
+ * Copyright 2019-2024 The Polypheny Project
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -24,8 +24,10 @@ import org.polypheny.db.cypher.expression.CypherExpression;
 import org.polypheny.db.cypher.expression.CypherVariable;
 import org.polypheny.db.cypher.parser.StringPos;
 import org.polypheny.db.languages.ParserPos;
-import org.polypheny.db.runtime.PolyCollections.PolyDictionary;
-import org.polypheny.db.schema.graph.PolyNode;
+import org.polypheny.db.type.entity.PolyList;
+import org.polypheny.db.type.entity.PolyString;
+import org.polypheny.db.type.entity.graph.PolyDictionary;
+import org.polypheny.db.type.entity.graph.PolyNode;
 import org.polypheny.db.util.Pair;
 
 @Getter
@@ -33,7 +35,7 @@ public class CypherNodePattern extends CypherPattern {
 
     private final CypherVariable variable;
     @Getter
-    private final List<String> labels;
+    private final List<PolyString> labels;
     private final List<ParserPos> positions;
 
     @Nullable
@@ -44,8 +46,8 @@ public class CypherNodePattern extends CypherPattern {
     public CypherNodePattern( ParserPos pos, CypherVariable variable, List<StringPos> labels, CypherExpression properties, CypherExpression predicate ) {
         super( pos );
         this.variable = variable;
-        this.labels = labels.stream().map( StringPos::getImage ).collect( Collectors.toList() );
-        this.positions = labels.stream().map( StringPos::getPos ).collect( Collectors.toList() );
+        this.labels = PolyList.copyOf( labels.stream().map( StringPos::getImage ).map( PolyString::of ).collect( Collectors.toList() ) );
+        this.positions = labels.stream().map( StringPos::getPos ).toList();
         this.properties = properties;
         this.predicate = predicate;
     }
@@ -57,7 +59,7 @@ public class CypherNodePattern extends CypherPattern {
     }
 
 
-    public Pair<String, PolyNode> getPolyNode() {
+    public Pair<PolyString, PolyNode> getPolyNode() {
         PolyDictionary properties = this.properties != null ? (PolyDictionary) this.properties.getComparable() : new PolyDictionary();
 
         String name = null;
@@ -65,7 +67,7 @@ public class CypherNodePattern extends CypherPattern {
             name = variable.getName();
         }
 
-        return Pair.of( name, new PolyNode( properties, labels, name ) );
+        return Pair.of( PolyString.of( name ), new PolyNode( properties, PolyList.copyOf( labels ), PolyString.of( name ) ) );
     }
 
 }
