@@ -1,5 +1,5 @@
 /*
- * Copyright 2019-2023 The Polypheny Project
+ * Copyright 2019-2024 The Polypheny Project
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -34,50 +34,89 @@
 package org.polypheny.db.adapter.jdbc;
 
 
+import java.lang.reflect.Method;
+import java.lang.reflect.Modifier;
+import java.sql.Date;
+import java.sql.ResultSet;
+import java.sql.SQLException;
+import java.sql.Time;
+import java.sql.Timestamp;
+import java.util.Calendar;
+import java.util.List;
+import java.util.Objects;
+import java.util.TimeZone;
+import lombok.NonNull;
+import lombok.extern.slf4j.Slf4j;
 import org.apache.calcite.linq4j.function.Function1;
-import org.apache.calcite.linq4j.tree.*;
+import org.apache.calcite.linq4j.tree.BlockBuilder;
+import org.apache.calcite.linq4j.tree.ConstantExpression;
+import org.apache.calcite.linq4j.tree.Expression;
+import org.apache.calcite.linq4j.tree.Expressions;
+import org.apache.calcite.linq4j.tree.ParameterExpression;
+import org.apache.calcite.linq4j.tree.Primitive;
+import org.apache.calcite.linq4j.tree.Types;
+import org.apache.calcite.linq4j.tree.UnaryExpression;
 import org.polypheny.db.adapter.DataContext;
-import org.polypheny.db.adapter.enumerable.*;
-import org.polypheny.db.adapter.java.JavaTypeFactory;
 import org.polypheny.db.adapter.jdbc.connection.ConnectionHandler;
 import org.polypheny.db.algebra.AbstractAlgNode;
 import org.polypheny.db.algebra.AlgNode;
 import org.polypheny.db.algebra.convert.ConverterImpl;
+import org.polypheny.db.algebra.enumerable.EnumerableAlg;
+import org.polypheny.db.algebra.enumerable.EnumerableAlgImplementor;
+import org.polypheny.db.algebra.enumerable.JavaTupleFormat;
+import org.polypheny.db.algebra.enumerable.PhysType;
+import org.polypheny.db.algebra.enumerable.PhysTypeImpl;
 import org.polypheny.db.algebra.metadata.AlgMetadataQuery;
 import org.polypheny.db.algebra.type.AlgDataType;
+import org.polypheny.db.catalog.exceptions.GenericRuntimeException;
 import org.polypheny.db.config.RuntimeConfig;
-import org.polypheny.db.plan.*;
+import org.polypheny.db.functions.Functions;
+import org.polypheny.db.functions.TemporalFunctions;
+import org.polypheny.db.plan.AlgCluster;
+import org.polypheny.db.plan.AlgOptCost;
+import org.polypheny.db.plan.AlgPlanner;
+import org.polypheny.db.plan.AlgTraitSet;
+import org.polypheny.db.plan.ConventionTraitDef;
+import org.polypheny.db.prepare.JavaTypeFactoryImpl;
 import org.polypheny.db.runtime.Hook;
-import org.polypheny.db.runtime.functions.Functions;
 import org.polypheny.db.schema.Schemas;
 import org.polypheny.db.sql.language.SqlDialect;
 import org.polypheny.db.sql.language.SqlDialect.CalendarPolicy;
 import org.polypheny.db.sql.language.util.SqlString;
-import org.polypheny.db.transaction.Statement;
-import org.polypheny.db.transaction.Transaction;
-import org.polypheny.db.transaction.Transaction.MultimediaFlavor;
 import org.polypheny.db.type.ArrayType;
 import org.polypheny.db.type.PolyType;
-import org.polypheny.db.type.PolyTypeFamily;
+import org.polypheny.db.type.entity.PolyBinary;
+import org.polypheny.db.type.entity.PolyBoolean;
+import org.polypheny.db.type.entity.PolyDefaults;
+import org.polypheny.db.type.entity.PolyList;
+import org.polypheny.db.type.entity.PolyLong;
+import org.polypheny.db.type.entity.PolyString;
+import org.polypheny.db.type.entity.PolyValue;
+import org.polypheny.db.type.entity.category.PolyBlob;
+import org.polypheny.db.type.entity.numerical.PolyBigDecimal;
+import org.polypheny.db.type.entity.numerical.PolyDouble;
+import org.polypheny.db.type.entity.numerical.PolyFloat;
+import org.polypheny.db.type.entity.numerical.PolyInteger;
+import org.polypheny.db.type.entity.temporal.PolyDate;
+import org.polypheny.db.type.entity.temporal.PolyTime;
+import org.polypheny.db.type.entity.temporal.PolyTimestamp;
 import org.polypheny.db.util.BuiltInMethod;
-
-import java.io.PushbackInputStream;
-import java.lang.reflect.Method;
-import java.lang.reflect.Modifier;
-import java.sql.ResultSet;
-import java.sql.SQLException;
-import java.util.ArrayList;
-import java.util.Calendar;
-import java.util.List;
-import java.util.TimeZone;
-import java.util.stream.Collectors;
 
 
 /**
- * Relational expression representing a scan of a table in a JDBC data source.
+ * Relational expression representing a relScan of a table in a JDBC data source.
  */
+@Slf4j
 public class JdbcToEnumerableConverter extends ConverterImpl implements EnumerableAlg {
 
+    @SuppressWarnings("unused")
+    public static final Calendar utc = Calendar.getInstance( TimeZone.getTimeZone( "UTC" ) );
+
+    public static final Calendar local = Calendar.getInstance( TemporalFunctions.LOCAL_TZ );
+
+    private static final Expression UTC_EXPRESSION = Expressions.field( null, JdbcToEnumerableConverter.class, "utc" );
+
+    private static final Expression LOCAL_EXPRESSION = Expressions.field( null, JdbcToEnumerableConverter.class, "local" );
     public static final Method JDBC_SCHEMA_GET_CONNECTION_HANDLER_METHOD = Types.lookupMethod(
             JdbcSchema.class,
             "getConnectionHandler",
@@ -106,7 +145,7 @@ public class JdbcToEnumerableConverter extends ConverterImpl implements Enumerab
             DataContext.class );
 
 
-    protected JdbcToEnumerableConverter( AlgOptCluster cluster, AlgTraitSet traits, AlgNode input ) {
+    protected JdbcToEnumerableConverter( AlgCluster cluster, AlgTraitSet traits, AlgNode input ) {
         super( cluster, ConventionTraitDef.INSTANCE, traits, input );
     }
 
@@ -118,9 +157,8 @@ public class JdbcToEnumerableConverter extends ConverterImpl implements Enumerab
 
 
     @Override
-    public AlgOptCost computeSelfCost( AlgOptPlanner planner, AlgMetadataQuery mq ) {
-        AlgOptCost cost = super.computeSelfCost( planner, mq ).multiplyBy( .1 );
-        return cost;
+    public AlgOptCost computeSelfCost( AlgPlanner planner, AlgMetadataQuery mq ) {
+        return super.computeSelfCost( planner, mq ).multiplyBy( .1 );
     }
 
 
@@ -133,8 +171,8 @@ public class JdbcToEnumerableConverter extends ConverterImpl implements Enumerab
         final PhysType physType =
                 PhysTypeImpl.of(
                         implementor.getTypeFactory(),
-                        getRowType(),
-                        pref.prefer( JavaRowFormat.CUSTOM ) );
+                        getTupleType(),
+                        pref.prefer( JavaTupleFormat.CUSTOM ) );
         final JdbcConvention jdbcConvention = (JdbcConvention) child.getConvention();
         SqlString sqlString = generateSql( jdbcConvention.dialect, jdbcConvention.getJdbcSchema() );
         String sql = sqlString.getSql();
@@ -143,44 +181,38 @@ public class JdbcToEnumerableConverter extends ConverterImpl implements Enumerab
         }
         Hook.QUERY_PLAN.run( sql );
         final Expression sql_ = builder0.append( "sql", Expressions.constant( sql ) );
-        final int fieldCount = getRowType().getFieldCount();
+        final int fieldCount = getTupleType().getFieldCount();
         BlockBuilder builder = new BlockBuilder();
         final ParameterExpression resultSet_ = Expressions.parameter( Modifier.FINAL, ResultSet.class, builder.newName( "resultSet" ) );
         final CalendarPolicy calendarPolicy = jdbcConvention.dialect.getCalendarPolicy();
         final Expression calendar_;
-        switch ( calendarPolicy ) {
-            case LOCAL:
-                calendar_ =
-                        builder0.append(
-                                "calendar",
-                                Expressions.call( Calendar.class, "getInstance", getTimeZoneExpression( implementor ) ) );
-                break;
-            default:
-                calendar_ = null;
-        }
-        if ( fieldCount == 1 ) {
-            final ParameterExpression value_ = Expressions.parameter( Object.class, builder.newName( "value" ) );
-            builder.add( Expressions.declare( Modifier.FINAL, value_, null ) );
-            generateGet( implementor, physType, builder, resultSet_, 0, value_, calendar_, calendarPolicy, jdbcConvention.dialect );
-            builder.add( Expressions.return_( null, value_ ) );
+
+        if ( Objects.requireNonNull( calendarPolicy ) == CalendarPolicy.LOCAL ) {
+            calendar_ =
+                    builder0.append(
+                            "calendar",
+                            Expressions.call( Calendar.class, "getInstance", getTimeZoneExpression( implementor ) ) );
         } else {
-            final Expression values_ = builder.append(
-                    "values",
-                    Expressions.newArrayBounds( Object.class, 1, Expressions.constant( fieldCount ) ) );
-            for ( int i = 0; i < fieldCount; i++ ) {
-                generateGet(
-                        implementor,
-                        physType,
-                        builder,
-                        resultSet_,
-                        i,
-                        Expressions.arrayIndex( values_, Expressions.constant( i ) ),
-                        calendar_,
-                        calendarPolicy,
-                        jdbcConvention.dialect );
-            }
-            builder.add( Expressions.return_( null, values_ ) );
+            calendar_ = null;
         }
+
+        final Expression values_ = builder.append(
+                "values",
+                Expressions.newArrayBounds( PolyValue.class, 1, Expressions.constant( fieldCount ) ) );
+        for ( int i = 0; i < fieldCount; i++ ) {
+            generateGet(
+                    implementor,
+                    physType,
+                    builder,
+                    resultSet_,
+                    i,
+                    Expressions.arrayIndex( values_, Expressions.constant( i ) ),
+                    calendar_,
+                    calendarPolicy,
+                    jdbcConvention.dialect );
+        }
+        builder.add( Expressions.return_( null, values_ ) );
+        //}
         final ParameterExpression e_ = Expressions.parameter( SQLException.class, builder.newName( "e" ) );
         final Expression rowBuilderFactory_ =
                 builder0.append(
@@ -193,7 +225,7 @@ public class JdbcToEnumerableConverter extends ConverterImpl implements Enumerab
                                                         Expressions.block(
                                                                 Expressions.tryCatch(
                                                                         builder.toBlock(),
-                                                                        Expressions.catch_( e_, Expressions.throw_( Expressions.new_( RuntimeException.class, e_ ) ) ) ) ) ) ) ),
+                                                                        Expressions.catch_( e_, Expressions.throw_( Expressions.new_( GenericRuntimeException.class, e_ ) ) ) ) ) ) ) ),
                                 resultSet_ ) );
 
         final Expression enumerable;
@@ -244,7 +276,7 @@ public class JdbcToEnumerableConverter extends ConverterImpl implements Enumerab
     private List<ConstantExpression> toIndexesTableExpression( SqlString sqlString ) {
         return sqlString.getDynamicParameters().stream()
                 .map( Expressions::constant )
-                .collect( Collectors.toList() );
+                .toList();
     }
 
 
@@ -268,15 +300,12 @@ public class JdbcToEnumerableConverter extends ConverterImpl implements Enumerab
             Expression calendar_,
             CalendarPolicy calendarPolicy,
             SqlDialect dialect ) {
-        final Primitive primitive = Primitive.ofBoxOr( physType.fieldClass( i ) );
-        final AlgDataType fieldType = physType.getRowType().getFieldList().get( i ).getType();
-        final List<Expression> dateTimeArgs = new ArrayList<>();
-        dateTimeArgs.add( Expressions.constant( i + 1 ) );
+        final Primitive primitive = Primitive.ofBoxOr( PolyValue.ofPrimitive( physType.fieldClass( i ), rowType.getFields().get( i ).getType().getPolyType() ) );
+        final AlgDataType fieldType = physType.getTupleType().getFields().get( i ).getType();
+
         PolyType polyType = fieldType.getPolyType();
-        boolean offset = false;
         switch ( calendarPolicy ) {
-            case LOCAL:
-                dateTimeArgs.add( calendar_ );
+            case LOCAL, SHIFT:
                 break;
             case NULL:
                 // We don't specify a calendar at all, so we don't add an argument and instead use the version of
@@ -285,76 +314,22 @@ public class JdbcToEnumerableConverter extends ConverterImpl implements Enumerab
             case DIRECT:
                 polyType = PolyType.ANY;
                 break;
-            case SHIFT:
-                switch ( polyType ) {
-                    case TIMESTAMP:
-                    case DATE:
-                        offset = true;
-                }
-                break;
         }
-        final Expression source;
-        switch ( polyType ) {
+        final Expression source = switch ( polyType ) {
             // TODO js(knn): Make sure this is more than just a hotfix.
             //  add nullability stuff as well
-            case ARRAY:
-                if ( dialect.supportsNestedArrays() ) {
-                    source = Expressions.call(
-                            BuiltInMethod.JDBC_DEEP_ARRAY_TO_LIST.method,
-                            Expressions.call( resultSet_, "getArray", Expressions.constant( i + 1 ) )
-                    );
-                } else {
-                    source = Expressions.call(
-                            BuiltInMethod.PARSE_ARRAY_FROM_TEXT.method,
-                            Expressions.constant( fieldType.getComponentType().getPolyType() ),
-                            Expressions.constant( ((ArrayType) fieldType).getDimension() ),
-                            Expressions.call( resultSet_, "getString", Expressions.constant( i + 1 ) )
-                    );
-                }
-                break;
+            case ARRAY -> getPreprocessArrayExpression( resultSet_, i, dialect, fieldType );
+            case DATE -> Expressions.call( resultSet_, "getDate", Expressions.constant( i + 1 ), UTC_EXPRESSION );
+            case TIME -> Expressions.call( resultSet_, "getTime", Expressions.constant( i + 1 ), LOCAL_EXPRESSION );
+            case TIMESTAMP -> Expressions.call( resultSet_, "getTimestamp", Expressions.constant( i + 1 ), UTC_EXPRESSION );
+            case FILE, AUDIO, IMAGE, VIDEO -> Expressions.call( resultSet_, BuiltInMethod.RESULTSET_GETBYTES.method, Expressions.constant( i + 1 ) );
+            default -> Expressions.call( resultSet_, jdbcGetMethod( primitive ), Expressions.constant( i + 1 ) );
+        };
+        final Expression poly = getOfPolyExpression( fieldType, source, resultSet_, i, dialect );
 
-            case DATE:
-            case TIME:
-            case TIMESTAMP:
-                source = Expressions.call(
-                        getMethod( polyType, fieldType.isNullable(), offset ),
-                        Expressions.<Expression>list()
-                                .append( Expressions.call( resultSet_, getMethod2( polyType ), dateTimeArgs ) )
-                                .appendIf( offset, getTimeZoneExpression( implementor ) ) );
-                break;
-            //When it is of type array, fetch with getObject, because it could either be an array or the elementType
-                /*case ARRAY:
-                if( dialect.supportsNestedArrays() ) {
-                    final Expression x = Expressions.convert_(
-                            Expressions.call( resultSet_, jdbcGetMethod( primitive ), Expressions.constant( i + 1 ) ),
-                            java.sql.Array.class );
-                    source = Expressions.call( BuiltInMethod.JDBC_ARRAY_TO_LIST.method, x );
-                } else {
-                    source = Expressions.call( resultSet_, jdbcGetMethod( primitive ), Expressions.constant( i + 1 ) );
-                }
-                break;
-                */
-            default:
-                if ( polyType.getFamily() == PolyTypeFamily.MULTIMEDIA ) {
-                    // if ( dataContext.getStatement().getTransaction().getFlavor() == MultimediaFlavor.DEFAULT ){ ..getBytes } else { ..getBinaryStream }
-                    Expression getStatement = Expressions.call( DataContext.ROOT, Types.lookupMethod( DataContext.class, "getStatement" ) );
-                    Expression getTransaction = Expressions.call( getStatement, Types.lookupMethod( Statement.class, "getTransaction" ) );
-                    Expression getFlavor = Expressions.call( getTransaction, Types.lookupMethod( Transaction.class, "getFlavor" ) );
-                    Expression getBinaryStream = Expressions.call( resultSet_, BuiltInMethod.RESULTSET_GETBINARYSTREAM.method, Expressions.constant( i + 1 ) );
-                    Expression getBytes = Expressions.call( resultSet_, BuiltInMethod.RESULTSET_GETBYTES.method, Expressions.constant( i + 1 ) );
-                    builder.add( Expressions.ifThenElse(
-                            Expressions.equal( getFlavor, Expressions.constant( MultimediaFlavor.DEFAULT ) ),
-                            Expressions.statement( Expressions.assign( target, getBytes ) ),
-                            //assign a PushbackInputStream for the SQL META function
-                            Expressions.statement( Expressions.assign( target, Expressions.new_( PushbackInputStream.class, getBinaryStream, Expressions.constant( 10240 ) ) ) ) ) );
-                    source = null;
-                } else {
-                    source = Expressions.call( resultSet_, jdbcGetMethod( primitive ), Expressions.constant( i + 1 ) );
-                }
-        }
         //source is null if an expression was already added to the builder.
-        if ( source != null ) {
-            builder.add( Expressions.statement( Expressions.assign( target, source ) ) );
+        if ( poly != null ) {
+            builder.add( Expressions.statement( Expressions.assign( target, poly ) ) );
         }
 
         // [POLYPHENYDB-596] If primitive type columns contain null value, returns null object
@@ -362,48 +337,122 @@ public class JdbcToEnumerableConverter extends ConverterImpl implements Enumerab
             builder.add(
                     Expressions.ifThen(
                             Expressions.call( resultSet_, "wasNull" ),
-                            Expressions.statement( Expressions.assign( target, Expressions.constant( null ) ) ) ) );
+                            Expressions.statement( Expressions.assign( target, PolyDefaults.NULLS.get( PolyValue.classFrom( polyType ) ).asExpression() ) ) ) );
         }
+
+
+    }
+
+
+    @NonNull
+    private static Expression getPreprocessArrayExpression( ParameterExpression resultSet_, int i, SqlDialect dialect, AlgDataType fieldType ) {
+        if ( (dialect.supportsArrays() && (fieldType.unwrap( ArrayType.class ).orElseThrow().getDimension() == 1 || dialect.supportsNestedArrays())) ) {
+            ParameterExpression argument = Expressions.parameter( Object.class );
+
+            AlgDataType componentType = fieldType.getComponentType();
+            int depth = 1;
+            while ( componentType.getComponentType() != null ) {
+                componentType = componentType.getComponentType();
+                depth++;
+            }
+
+            return Expressions.call(
+                    BuiltInMethod.JDBC_DEEP_ARRAY_TO_POLY_LIST.method,
+                    Expressions.call( resultSet_, "getArray", Expressions.constant( i + 1 ) ),
+                    Expressions.lambda( getOfPolyExpression( componentType, argument, resultSet_, i, dialect ), argument ),
+                    Expressions.constant( depth )
+            );
+        }
+        return Expressions.call(
+                BuiltInMethod.PARSE_ARRAY_FROM_TEXT.method,
+                Expressions.call( resultSet_, "getString", Expressions.constant( i + 1 ) )
+        );
+
+    }
+
+
+    private static Expression getOfPolyExpression( AlgDataType fieldType, Expression source, ParameterExpression resultSet_, int i, SqlDialect dialect ) {
+        final Expression poly;
+        String methodName = fieldType.isNullable() ? "ofNullable" : "of";
+        switch ( fieldType.getPolyType() ) {
+            case BIGINT:
+                poly = Expressions.call( PolyLong.class, methodName, Expressions.convert_( source, Number.class ) );
+                break;
+            case VARCHAR:
+            case CHAR:
+                poly = Expressions.call( PolyString.class, methodName, Expressions.convert_( source, String.class ) );
+                break;
+            case SMALLINT:
+            case TINYINT:
+            case INTEGER:
+                poly = Expressions.call( PolyInteger.class, methodName, Expressions.convert_( source, Number.class ) );
+                break;
+            case BOOLEAN:
+                poly = Expressions.call( PolyBoolean.class, methodName, Expressions.convert_( source, Boolean.class ) );
+                break;
+            case FLOAT:
+            case REAL:
+                poly = Expressions.call( PolyFloat.class, methodName, Expressions.convert_( source, Number.class ) );
+                break;
+            case DOUBLE:
+                poly = Expressions.call( PolyDouble.class, methodName, Expressions.convert_( source, Number.class ) );
+                break;
+            case TIME:
+                poly = Expressions.call( PolyTime.class, methodName, Expressions.convert_( source, Time.class ) );
+                break;
+            case TIMESTAMP:
+                UnaryExpression timestamp = Expressions.convert_( source, Timestamp.class );
+                poly = Expressions.call( PolyTimestamp.class, methodName, timestamp );
+                break;
+            case DATE:
+                Expression date = Expressions.convert_( source, Date.class );
+                poly = Expressions.call( PolyDate.class, methodName, date );
+                break;
+            case DECIMAL:
+                poly = Expressions.call( PolyBigDecimal.class, methodName, Expressions.convert_( source, Number.class ), Expressions.constant( fieldType.getPrecision() ), Expressions.constant( fieldType.getScale() ) );
+                break;
+            case ARRAY:
+                poly = Expressions.call( PolyList.class, methodName, source );
+                break;
+            case VARBINARY:
+                if ( dialect.supportsComplexBinary() ) {
+                    poly = Expressions.call( PolyBinary.class, methodName, Expressions.convert_( source, byte[].class ) );
+                } else {
+                    poly = Expressions.call( PolyBinary.class, "fromTypedJson", Expressions.convert_( source, String.class ), Expressions.constant( PolyBinary.class ) );
+                }
+                break;
+            case TEXT:
+                poly = dialect.getExpression( fieldType, source );
+                break;
+            case FILE:
+            case AUDIO:
+            case IMAGE:
+            case VIDEO:
+                poly = Expressions.call( PolyBlob.class, methodName, Expressions.convert_( source, byte[].class ) );
+                break;
+            default:
+                log.warn( "potentially unhandled polyValue" );
+                poly = source;
+        }
+        return poly;
     }
 
 
     private Method getMethod( PolyType polyType, boolean nullable, boolean offset ) {
-        switch ( polyType ) {
-            case ARRAY:
-                return BuiltInMethod.JDBC_DEEP_ARRAY_TO_LIST.method;
-            case DATE:
-                return (nullable
-                        ? BuiltInMethod.DATE_TO_INT_OPTIONAL
-                        : BuiltInMethod.DATE_TO_INT).method;
-            case TIME:
-                return (nullable
-                        ? BuiltInMethod.TIME_TO_INT_OPTIONAL
-                        : BuiltInMethod.TIME_TO_INT).method;
-            case TIMESTAMP:
-                return (nullable
-                        ? (offset
-                        ? BuiltInMethod.TIMESTAMP_TO_LONG_OPTIONAL_OFFSET
-                        : BuiltInMethod.TIMESTAMP_TO_LONG_OPTIONAL)
-                        : (offset
-                                ? BuiltInMethod.TIMESTAMP_TO_LONG_OFFSET
-                                : BuiltInMethod.TIMESTAMP_TO_LONG)).method;
-            default:
-                throw new AssertionError( polyType + ":" + nullable );
-        }
+        return switch ( polyType ) {
+            case ARRAY -> BuiltInMethod.JDBC_DEEP_ARRAY_TO_LIST.method;
+            default -> throw new AssertionError( polyType + ":" + nullable );
+        };
     }
 
 
     private Method getMethod2( PolyType polyType ) {
-        switch ( polyType ) {
-            case DATE:
-                return BuiltInMethod.RESULT_SET_GET_DATE2.method;
-            case TIME:
-                return BuiltInMethod.RESULT_SET_GET_TIME2.method;
-            case TIMESTAMP:
-                return BuiltInMethod.RESULT_SET_GET_TIMESTAMP2.method;
-            default:
-                throw new AssertionError( polyType );
-        }
+        return switch ( polyType ) {
+            case DATE -> BuiltInMethod.RESULT_SET_GET_DATE2.method;
+            case TIME -> BuiltInMethod.RESULT_SET_GET_TIME2.method;
+            case TIMESTAMP -> BuiltInMethod.RESULT_SET_GET_TIMESTAMP2.method;
+            default -> throw new AssertionError( polyType );
+        };
     }
 
 
@@ -418,7 +467,7 @@ public class JdbcToEnumerableConverter extends ConverterImpl implements Enumerab
 
 
     private SqlString generateSql( SqlDialect dialect, JdbcSchema jdbcSchema ) {
-        final JdbcImplementor jdbcImplementor = new JdbcImplementor( dialect, (JavaTypeFactory) getCluster().getTypeFactory(), jdbcSchema );
+        final JdbcImplementor jdbcImplementor = new JdbcImplementor( dialect, new JavaTypeFactoryImpl(), jdbcSchema );
         final JdbcImplementor.Result result = jdbcImplementor.visitChild( 0, getInput() );
         return result.asStatement().toSqlString( dialect );
     }
