@@ -1,5 +1,5 @@
 /*
- * Copyright 2019-2023 The Polypheny Project
+ * Copyright 2019-2024 The Polypheny Project
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -35,6 +35,11 @@ package org.polypheny.db.adapter.mongodb;
 
 
 import com.mongodb.client.gridfs.GridFSBucket;
+import java.io.Serializable;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Set;
+import java.util.TreeSet;
 import lombok.Getter;
 import lombok.Setter;
 import org.bson.BsonArray;
@@ -44,20 +49,14 @@ import org.bson.json.JsonWriterSettings;
 import org.polypheny.db.adapter.mongodb.MongoPlugin.MongoStore;
 import org.polypheny.db.algebra.AlgNode;
 import org.polypheny.db.algebra.AlgShuttleImpl;
-import org.polypheny.db.algebra.core.Modify.Operation;
-import org.polypheny.db.algebra.core.Scan;
-import org.polypheny.db.algebra.logical.relational.LogicalProject;
-import org.polypheny.db.algebra.type.AlgRecordType;
-import org.polypheny.db.plan.AlgOptTable;
+import org.polypheny.db.algebra.core.common.Modify.Operation;
+import org.polypheny.db.algebra.logical.relational.LogicalRelProject;
+import org.polypheny.db.algebra.logical.relational.LogicalRelScan;
+import org.polypheny.db.algebra.type.AlgDataType;
+import org.polypheny.db.catalog.entity.physical.PhysicalEntity;
+import org.polypheny.db.catalog.exceptions.GenericRuntimeException;
 import org.polypheny.db.plan.Convention;
 import org.polypheny.db.util.Pair;
-
-import java.io.Serializable;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Set;
-import java.util.TreeSet;
-import java.util.stream.Collectors;
 
 
 /**
@@ -68,9 +67,9 @@ public interface MongoAlg extends AlgNode {
     void implement( Implementor implementor );
 
     /**
-     * Calling convention for relational operations that occur in MongoDB.
+     * Calling convention for algebra operations that occur in MongoDB.
      */
-    Convention CONVENTION = MongoConvention.INSTANCE;//new Convention.Impl( "MONGO", MongoRel.class );
+    Convention CONVENTION = MongoConvention.INSTANCE;//new Convention.Impl( "MONGO", MongoAlg.class );
 
 
     /**
@@ -78,8 +77,9 @@ public interface MongoAlg extends AlgNode {
      */
     class Implementor extends AlgShuttleImpl implements Serializable {
 
-        final List<Pair<String, String>> list = new ArrayList<>();
+        public final List<Pair<String, String>> list = new ArrayList<>();
         public List<BsonDocument> operations = new ArrayList<>();
+
         public BsonArray filter = new BsonArray();
         @Getter
         @Setter
@@ -92,12 +92,17 @@ public interface MongoAlg extends AlgNode {
         public boolean onlyOne = false;
         public boolean isDocumentUpdate = false;
 
-        AlgOptTable table;
+        @Getter
+        private MongoEntity entity;
+
+        @Getter
+        @Setter
+        private AlgDataType tupleType;
+
         @Setter
         @Getter
         public boolean hasProject = false;
 
-        MongoEntity mongoEntity;
         @Setter
         @Getter
         private boolean isDML;
@@ -105,9 +110,6 @@ public interface MongoAlg extends AlgNode {
         @Getter
         @Setter
         private Operation operation;
-
-        @Getter
-        private AlgRecordType staticRowType;
 
 
         public Implementor() {
@@ -131,24 +133,19 @@ public interface MongoAlg extends AlgNode {
         }
 
 
-        public void setStaticRowType( AlgRecordType staticRowType ) {
-            if ( this.staticRowType != null ) {
-                return;
+        public String getPhysicalName( String name ) {
+            MongoEntity mongoEntity = entity.physical.unwrap( PhysicalEntity.class ).orElseThrow().unwrap( MongoEntity.class ).orElseThrow();
+            int index = mongoEntity.fields.stream().map( c -> c.logicalName ).toList().indexOf( name );
+            if ( index != -1 ) {
+                return MongoStore.getPhysicalColumnName( mongoEntity.fields.stream().map( c -> c.id ).toList().get( index ) );
             }
-            if ( mongoEntity != null ) {
-                this.staticRowType = MongoRowType.fromRecordType( staticRowType, mongoEntity );
-            } else {
-                this.staticRowType = staticRowType;
-            }
+            throw new GenericRuntimeException( "This column is not part of the table." );
         }
 
 
-        public String getPhysicalName( String name ) {
-            int index = mongoEntity.getCatalogTable().getColumnNames().indexOf( name );
-            if ( index != -1 ) {
-                return MongoStore.getPhysicalColumnName( name, mongoEntity.getCatalogTable().fieldIds.get( index ) );
-            }
-            throw new RuntimeException( "This column is not part of the table." );
+        public void setEntity( MongoEntity entity ) {
+            this.entity = entity;
+            this.tupleType = entity.getTupleType();
         }
 
 
@@ -156,7 +153,7 @@ public interface MongoAlg extends AlgNode {
             BsonDocument filter;
             if ( this.filter.size() == 1 ) {
                 filter = this.filter.get( 0 ).asDocument();
-            } else if ( this.filter.size() == 0 ) {
+            } else if ( this.filter.isEmpty() ) {
                 filter = new BsonDocument();
             } else {
                 filter = new BsonDocument( "$or", this.filter );
@@ -172,12 +169,12 @@ public interface MongoAlg extends AlgNode {
 
 
         public List<String> getPreProjects() {
-            return preProjections.stream().map( Implementor::toJson ).collect( Collectors.toList() );
+            return preProjections.stream().map( Implementor::toJson ).toList();
         }
 
 
         public List<String> getOperations() {
-            return operations.stream().map( Implementor::toJson ).collect( Collectors.toList() );
+            return operations.stream().map( Implementor::toJson ).toList();
         }
 
 
@@ -187,7 +184,7 @@ public interface MongoAlg extends AlgNode {
 
 
         @Override
-        public AlgNode visit( LogicalProject project ) {
+        public AlgNode visit( LogicalRelProject project ) {
             super.visit( project );
 
             return project;
@@ -195,7 +192,7 @@ public interface MongoAlg extends AlgNode {
 
 
         @Override
-        public AlgNode visit( Scan scan ) {
+        public AlgNode visit( LogicalRelScan scan ) {
             super.visit( scan );
 
             return scan;
@@ -203,15 +200,14 @@ public interface MongoAlg extends AlgNode {
 
 
         public List<String> getNecessaryPhysicalFields() {
-            return new ArrayList<>( physicalMapper );
+            return new ArrayList<>( entity.getTupleType().getFieldNames() );
         }
 
 
         public List<String> reorderPhysical() {
-            // this is only needed if there is a basic scan without project or group,
+            // this is only needed if there is a basic relScan without project or group,
             // where we cannot be sure if the fields are all ordered as intended
-            assert table.getRowType().getFieldCount() == physicalMapper.size();
-            return table.getRowType().getFieldNames();
+            return entity.getTupleType().getFieldNames();
         }
 
     }
