@@ -1,5 +1,5 @@
 /*
- * Copyright 2019-2023 The Polypheny Project
+ * Copyright 2019-2024 The Polypheny Project
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -44,60 +44,65 @@ import com.mongodb.client.model.DeleteManyModel;
 import com.mongodb.client.model.DeleteOneModel;
 import com.mongodb.client.model.WriteModel;
 import java.util.ArrayList;
-import java.util.Collection;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
-import java.util.Map.Entry;
 import java.util.stream.Collectors;
+import lombok.EqualsAndHashCode;
 import lombok.Getter;
+import lombok.Value;
+import lombok.experimental.SuperBuilder;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.calcite.linq4j.AbstractEnumerable;
 import org.apache.calcite.linq4j.Enumerable;
 import org.apache.calcite.linq4j.Enumerator;
 import org.apache.calcite.linq4j.Linq4j;
-import org.apache.calcite.linq4j.Queryable;
 import org.apache.calcite.linq4j.function.Function1;
+import org.apache.calcite.linq4j.tree.Expression;
+import org.apache.calcite.linq4j.tree.Expressions;
 import org.bson.BsonDocument;
-import org.bson.BsonInt32;
-import org.bson.BsonString;
 import org.bson.Document;
 import org.bson.conversions.Bson;
 import org.bson.json.JsonMode;
 import org.bson.json.JsonWriterSettings;
 import org.polypheny.db.adapter.AdapterManager;
 import org.polypheny.db.adapter.DataContext;
-import org.polypheny.db.adapter.java.AbstractQueryableTable;
-import org.polypheny.db.adapter.mongodb.MongoPlugin.MongoStore;
+import org.polypheny.db.adapter.mongodb.rules.MongoScan;
 import org.polypheny.db.adapter.mongodb.util.MongoDynamic;
+import org.polypheny.db.adapter.mongodb.util.MongoTupleType;
 import org.polypheny.db.algebra.AlgNode;
-import org.polypheny.db.algebra.core.Modify;
-import org.polypheny.db.algebra.core.Modify.Operation;
-import org.polypheny.db.algebra.core.document.DocumentModify;
+import org.polypheny.db.algebra.core.common.Modify;
+import org.polypheny.db.algebra.core.common.Modify.Operation;
 import org.polypheny.db.algebra.logical.document.LogicalDocumentModify;
-import org.polypheny.db.algebra.logical.relational.LogicalModify;
+import org.polypheny.db.algebra.logical.relational.LogicalRelModify;
 import org.polypheny.db.algebra.type.AlgDataType;
 import org.polypheny.db.algebra.type.AlgDataTypeFactory;
+import org.polypheny.db.algebra.type.AlgDataTypeImpl;
 import org.polypheny.db.algebra.type.AlgProtoDataType;
-import org.polypheny.db.catalog.entity.CatalogCollection;
-import org.polypheny.db.catalog.entity.CatalogCollectionPlacement;
-import org.polypheny.db.catalog.entity.CatalogPartitionPlacement;
-import org.polypheny.db.catalog.entity.CatalogTable;
-import org.polypheny.db.plan.AlgOptCluster;
-import org.polypheny.db.plan.AlgOptTable;
-import org.polypheny.db.plan.AlgOptTable.ToAlgContext;
+import org.polypheny.db.catalog.Catalog;
+import org.polypheny.db.catalog.entity.Entity;
+import org.polypheny.db.catalog.entity.physical.PhysicalCollection;
+import org.polypheny.db.catalog.entity.physical.PhysicalColumn;
+import org.polypheny.db.catalog.entity.physical.PhysicalEntity;
+import org.polypheny.db.catalog.entity.physical.PhysicalField;
+import org.polypheny.db.catalog.exceptions.GenericRuntimeException;
+import org.polypheny.db.catalog.logistic.DataModel;
+import org.polypheny.db.catalog.snapshot.Snapshot;
+import org.polypheny.db.plan.AlgCluster;
 import org.polypheny.db.plan.AlgTraitSet;
 import org.polypheny.db.plan.Convention;
-import org.polypheny.db.prepare.Prepare.CatalogReader;
 import org.polypheny.db.rex.RexNode;
-import org.polypheny.db.schema.ModifiableCollection;
-import org.polypheny.db.schema.ModifiableTable;
-import org.polypheny.db.schema.SchemaPlus;
-import org.polypheny.db.schema.TranslatableTable;
-import org.polypheny.db.schema.impl.AbstractTableQueryable;
+import org.polypheny.db.schema.impl.AbstractEntityQueryable;
+import org.polypheny.db.schema.types.ModifiableCollection;
+import org.polypheny.db.schema.types.ModifiableTable;
+import org.polypheny.db.schema.types.QueryableEntity;
+import org.polypheny.db.schema.types.TranslatableEntity;
 import org.polypheny.db.transaction.PolyXid;
+import org.polypheny.db.type.entity.PolyLong;
+import org.polypheny.db.type.entity.PolyValue;
 import org.polypheny.db.util.BsonUtil;
 import org.polypheny.db.util.Util;
 
@@ -105,106 +110,93 @@ import org.polypheny.db.util.Util;
 /**
  * Table based on a MongoDB collection.
  */
+@EqualsAndHashCode(callSuper = true)
 @Slf4j
-public class MongoEntity extends AbstractQueryableTable implements TranslatableTable, ModifiableTable, ModifiableCollection {
+@Value
+@SuperBuilder(toBuilder = true)
+public class MongoEntity extends PhysicalEntity implements TranslatableEntity, ModifiableTable, ModifiableCollection, QueryableEntity {
 
     @Getter
-    private final String collectionName;
+    public MongoNamespace mongoNamespace;
     @Getter
-    private final AlgProtoDataType protoRowType;
+    public TransactionProvider transactionProvider;
     @Getter
-    private final MongoSchema mongoSchema;
-    @Getter
-    private final MongoCollection<Document> collection;
-    @Getter
-    private final CatalogTable catalogTable;
+    public long storeId;
+    public PhysicalEntity physical;
 
     @Getter
-    private final CatalogCollection catalogCollection;
-    @Getter
-    private final TransactionProvider transactionProvider;
-    @Getter
-    private final int storeId;
+    public MongoCollection<Document> collection;
+    public List<? extends PhysicalField> fields;
 
 
     /**
      * Creates a MongoTable.
      */
-    MongoEntity( CatalogTable catalogTable, MongoSchema schema, AlgProtoDataType proto, TransactionProvider transactionProvider, int storeId, CatalogPartitionPlacement partitionPlacement ) {
-        super( Object[].class );
-        this.collectionName = MongoStore.getPhysicalTableName( catalogTable.id, partitionPlacement.partitionId );
+    MongoEntity( PhysicalEntity physical, List<? extends PhysicalField> fields, MongoNamespace namespace, TransactionProvider transactionProvider ) {
+        super( physical.id, physical.allocationId, physical.logicalId, physical.name, physical.namespaceId, physical.namespaceName.toLowerCase(), physical.getUniqueFieldIds(), physical.dataModel, physical.adapterId );
+        this.physical = physical;
+        this.mongoNamespace = namespace;
         this.transactionProvider = transactionProvider;
-        this.catalogTable = catalogTable;
-        this.catalogCollection = null;
-        this.protoRowType = proto;
-        this.mongoSchema = schema;
-        this.collection = schema.database.getCollection( collectionName );
-        this.storeId = storeId;
-        this.tableId = catalogTable.id;
+        this.storeId = physical.adapterId;
+        this.collection = namespace.database.getCollection( physical.name );
+        this.fields = fields;
     }
 
 
-    public MongoEntity( CatalogCollection catalogEntity, MongoSchema schema, AlgProtoDataType proto, TransactionProvider transactionProvider, int adapter, CatalogCollectionPlacement partitionPlacement ) {
-        super( Object[].class );
-        this.collectionName = MongoStore.getPhysicalTableName( catalogEntity.id, partitionPlacement.id );
-        this.transactionProvider = transactionProvider;
-        this.catalogTable = null;
-        this.catalogCollection = catalogEntity;
-        this.protoRowType = proto;
-        this.mongoSchema = schema;
-        this.collection = schema.database.getCollection( collectionName );
-        this.storeId = adapter;
-        this.tableId = catalogEntity.id;
+    @Override
+    public AlgDataType getTupleType() {
+        if ( dataModel == DataModel.RELATIONAL ) {
+            return buildProto().apply( AlgDataTypeFactory.DEFAULT );
+        }
+        return super.getTupleType();
+    }
+
+
+    public AlgProtoDataType buildProto() {
+        final AlgDataTypeFactory.Builder fieldInfo = AlgDataTypeFactory.DEFAULT.builder();
+
+        for ( PhysicalColumn column : fields.stream().map( f -> f.unwrap( PhysicalColumn.class ).orElseThrow() ).sorted( Comparator.comparingInt( a -> a.position ) ).toList() ) {
+            AlgDataType sqlType = column.getAlgDataType( AlgDataTypeFactory.DEFAULT );
+            fieldInfo.add( column.id, column.logicalName, column.name, sqlType ).nullable( column.nullable );
+        }
+
+        return AlgDataTypeImpl.proto( fieldInfo.build() );
     }
 
 
     public String toString() {
-        return "MongoTable {" + collectionName + "}";
+        return "MongoEntity {" + physical.name + "}";
     }
 
 
     @Override
-    public AlgDataType getRowType( AlgDataTypeFactory typeFactory ) {
-        return protoRowType.apply( typeFactory );
-    }
-
-
-    @Override
-    public <T> Queryable<T> asQueryable( DataContext dataContext, SchemaPlus schema, String tableName ) {
-        return new MongoQueryable<>( dataContext, schema, this, tableName );
-    }
-
-
-    @Override
-    public AlgNode toAlg( ToAlgContext context, AlgOptTable algOptTable, AlgTraitSet traitSet ) {
-        final AlgOptCluster cluster = context.getCluster();
-        return new MongoScan( cluster, traitSet.replace( MongoAlg.CONVENTION ), algOptTable, this, null );
+    public AlgNode toAlg( AlgCluster cluster, AlgTraitSet traitSet ) {
+        return new MongoScan( cluster, traitSet.replace( MongoAlg.CONVENTION ), this );
     }
 
 
     /**
      * Executes a "find" operation on the underlying collection.
-     *
+     * <p>
      * For example,
      * <code>zipsTable.find("{state: 'OR'}", "{city: 1, zipcode: 1}")</code>
      *
      * @param mongoDb MongoDB connection
      * @param filterJson Filter JSON string, or null
      * @param projectJson Project JSON string, or null
-     * @param fields List of fields to project; or null to return map
+     * @param tupleType List of fields to project; or null to return map
      * @return Enumerator of results
      */
-    private Enumerable<Object> find( MongoDatabase mongoDb, MongoEntity table, String filterJson, String projectJson, List<Entry<String, Class>> fields, List<Entry<String, Class>> arrayFields ) {
-        final MongoCollection<Document> collection = mongoDb.getCollection( collectionName );
+    private Enumerable<PolyValue[]> find( MongoDatabase mongoDb, MongoEntity table, String filterJson, String projectJson, MongoTupleType tupleType ) {
         final Bson filter = filterJson == null ? new BsonDocument() : BsonDocument.parse( filterJson );
         final Bson project = projectJson == null ? new BsonDocument() : BsonDocument.parse( projectJson );
-        final Function1<Document, Object> getter = MongoEnumerator.getter( fields, arrayFields );
+        final Function1<Document, PolyValue[]> getter = MongoEnumerator.getter( tupleType );
 
         return new AbstractEnumerable<>() {
             @Override
-            public Enumerator<Object> enumerator() {
+            public Enumerator<PolyValue[]> enumerator() {
                 final FindIterable<Document> cursor = collection.find( filter ).projection( project );
-                return new MongoEnumerator( cursor.iterator(), getter, table.getMongoSchema().getBucket() );
+                return new MongoEnumerator( cursor.map( getter::apply ).iterator(), table.getMongoNamespace().getBucket() );
             }
         };
     }
@@ -212,7 +204,7 @@ public class MongoEntity extends AbstractQueryableTable implements TranslatableT
 
     /**
      * Executes an "aggregate" operation on the underlying collection.
-     *
+     * <p>
      * For example:
      * <code>zipsTable.aggregate(
      * "{$filter: {state: 'OR'}",
@@ -222,25 +214,23 @@ public class MongoEntity extends AbstractQueryableTable implements TranslatableT
      * @param dataContext the context, which specifies multiple parameters regarding data
      * @param session the sessions to which the aggregation belongs
      * @param mongoDb MongoDB connection
-     * @param fields List of fields to project; or null to return map
+     * @param tupleType List of fields to project; or null to return map
      * @param operations One or more JSON strings
      * @param parameterValues the values pre-ordered
      * @return Enumerator of results
      */
-    private Enumerable<Object> aggregate(
-            DataContext dataContext, ClientSession session,
+    public Enumerable<PolyValue[]> aggregate(
+            DataContext dataContext,
+            ClientSession session,
             final MongoDatabase mongoDb,
             MongoEntity table,
-            final List<Entry<String, Class>> fields,
-            List<Entry<String, Class>> arrayFields,
+            MongoTupleType tupleType,
             final List<String> operations,
-            Map<Long, Object> parameterValues,
-            //BsonDocument filter,
-            List<BsonDocument> preOps,
-            List<String> logicalCols ) {
+            Map<Long, PolyValue> parameterValues,
+            List<BsonDocument> preOps ) {
         final List<BsonDocument> list = new ArrayList<>();
 
-        if ( parameterValues.size() == 0 ) {
+        if ( parameterValues.isEmpty() ) {
             // direct query
             preOps.forEach( op -> list.add( new BsonDocument( "$addFields", op ) ) );
 
@@ -250,115 +240,123 @@ public class MongoEntity extends AbstractQueryableTable implements TranslatableT
         } else {
             // prepared
             preOps.stream()
-                    .map( op -> new MongoDynamic( new BsonDocument( "$addFields", op ), mongoSchema.getBucket(), dataContext ) )
+                    .map( op -> new MongoDynamic( new BsonDocument( "$addFields", op ), mongoNamespace.getBucket() ) )
                     .forEach( util -> list.add( util.insert( parameterValues ) ) );
 
             for ( String operation : operations ) {
-                MongoDynamic opUtil = new MongoDynamic( BsonDocument.parse( operation ), getMongoSchema().getBucket(), dataContext );
+                MongoDynamic opUtil = new MongoDynamic( BsonDocument.parse( operation ), getMongoNamespace().getBucket() );
                 list.add( opUtil.insert( parameterValues ) );
             }
         }
 
-        if ( logicalCols.size() != 0 && catalogTable != null ) {
-            list.add( 0, getPhysicalProjections( logicalCols, catalogTable.getColumnNames(), catalogTable.fieldIds ) );
-        }
-
-        final Function1<Document, Object> getter = MongoEnumerator.getter( fields, arrayFields );
+        final Function1<Document, PolyValue[]> getter = MongoEnumerator.getter( tupleType );
 
         if ( log.isDebugEnabled() ) {
-            log.debug( list.stream().map( el -> el.toBsonDocument().toJson( JsonWriterSettings.builder().outputMode( JsonMode.SHELL ).build() ) ).collect( Collectors.joining( ",\n" ) ) );
+            log.warn( list.stream().map( el -> el.toBsonDocument().toJson( JsonWriterSettings.builder().outputMode( JsonMode.SHELL ).build() ) ).collect( Collectors.joining( ",\n" ) ) );
         }
 
         // empty docs are possible
         if ( list.isEmpty() ) {
             list.add( new BsonDocument( "$match", new BsonDocument() ) );
         }
-        //list.forEach( el -> System.out.println( el.toBsonDocument().toJson( JsonWriterSettings.builder().outputMode( JsonMode.SHELL ).build() ) ) );
+
         return new AbstractEnumerable<>() {
             @Override
-            public Enumerator<Object> enumerator() {
-                final Iterator<Document> resultIterator;
+            public Enumerator<PolyValue[]> enumerator() {
+                final Iterator<PolyValue[]> resultIterator;
                 try {
-                    if ( list.size() != 0 ) {
-                        resultIterator = mongoDb.getCollection( collectionName ).aggregate( session, list ).iterator();
+                    if ( !list.isEmpty() ) {
+                        resultIterator = mongoDb.getCollection( physical.name ).aggregate( session, list ).map( getter::apply ).iterator();
                     } else {
                         resultIterator = Collections.emptyIterator();
                     }
                 } catch ( Exception e ) {
-                    throw new RuntimeException( "While running MongoDB query " + Util.toString( list, "[", ",\n", "]" ), e );
+                    throw new GenericRuntimeException( "While running MongoDB query " + Util.toString( list, "[", ",\n", "]" ), e );
                 }
-                return new MongoEnumerator( resultIterator, getter, table.getMongoSchema().getBucket() );
+                return new MongoEnumerator( resultIterator, table.getMongoNamespace().getBucket() );
             }
         };
     }
 
 
-    public static BsonDocument getPhysicalProjections( List<String> logicalCols, List<String> fieldNames, List<Long> fieldIds ) {
-        BsonDocument projections = new BsonDocument();
-        for ( String logicalCol : logicalCols ) {
-            int index = fieldNames.indexOf( logicalCol );
-            if ( index != -1 ) {
-                projections.append( logicalCol, new BsonString( "$" + MongoStore.getPhysicalColumnName( logicalCol, fieldIds.get( index ) ) ) );
-            } else {
-                projections.append( logicalCol, new BsonInt32( 1 ) );
-            }
-        }
-        return new BsonDocument( "$project", projections );
-    }
-
-
-    /**
-     * Helper method to strip non-numerics from a string.
-     *
-     * Currently used to determine mongod versioning numbers
-     * from buildInfo.versionArray for use in aggregate method logic.
-     */
-    private static Integer parseIntString( String valueString ) {
-        return Integer.parseInt( valueString.replaceAll( "[^0-9]", "" ) );
-    }
-
-
     @Override
-    public Collection getModifiableCollection() {
-        throw new RuntimeException( "getModifiableCollection() is not implemented for MongoDB adapter!" );
-    }
-
-
-    @Override
-    public Modify toModificationAlg(
-            AlgOptCluster cluster,
-            AlgOptTable table,
-            CatalogReader catalogReader,
+    public Modify<?> toModificationTable(
+            AlgCluster cluster,
+            AlgTraitSet traitSet,
+            Entity table,
             AlgNode child,
             Operation operation,
             List<String> updateColumnList,
-            List<RexNode> sourceExpressionList,
-            boolean flattened ) {
-        mongoSchema.getConvention().register( cluster.getPlanner() );
-        return new LogicalModify(
-                cluster,
+            List<? extends RexNode> sourceExpressionList ) {
+        mongoNamespace.getConvention().register( cluster.getPlanner() );
+        return new LogicalRelModify(
                 cluster.traitSetOf( Convention.NONE ),
                 table,
-                catalogReader,
                 child,
                 operation,
                 updateColumnList,
-                sourceExpressionList,
-                flattened );
+                sourceExpressionList );
     }
 
 
     @Override
-    public DocumentModify toModificationAlg(
-            AlgOptCluster cluster,
-            AlgOptTable table,
-            CatalogReader catalogReader,
+    public Modify<?> toModificationCollection(
+            AlgCluster cluster,
+            AlgTraitSet traits,
+            Entity collection,
             AlgNode child,
             Operation operation,
-            List<String> keys,
-            List<RexNode> updates ) {
-        mongoSchema.getConvention().register( cluster.getPlanner() );
-        return new LogicalDocumentModify( child.getTraitSet(), table, catalogReader, child, operation, keys, updates );
+            Map<String, ? extends RexNode> updates,
+            Map<String, String> renames,
+            List<String> removes ) {
+        mongoNamespace.getConvention().register( cluster.getPlanner() );
+        return new LogicalDocumentModify(
+                cluster.traitSetOf( Convention.NONE ),
+                collection,
+                child,
+                operation,
+                updates,
+                removes,
+                renames );
+    }
+
+
+    @Override
+    public PolyValue[] getParameterArray() {
+        return new PolyValue[0];
+    }
+
+
+    @Override
+    public Expression asExpression() {
+        return Expressions.call(
+                Expressions.convert_(
+                        Expressions.call(
+                                Expressions.call(
+                                        mongoNamespace.getStore().getCatalogAsExpression(),
+                                        "getPhysical", Expressions.constant( id ) ),
+                                "unwrapOrThrow", Expressions.constant( MongoEntity.class ) ),
+                        MongoEntity.class ),
+                "asQueryable",
+                DataContext.ROOT,
+                Catalog.SNAPSHOT_EXPRESSION );
+    }
+
+
+    @Override
+    public MongoQueryable<PolyValue[]> asQueryable( DataContext dataContext, Snapshot snapshot ) {
+        return new MongoQueryable<>( dataContext, snapshot, this );
+    }
+
+
+    @Override
+    public PhysicalEntity normalize() {
+        return new PhysicalCollection( id, allocationId, logicalId, namespaceId, name, namespaceName, adapterId );
+    }
+
+
+    public String getPhysicalName( String logicalName ) {
+        return fields.stream().filter( f -> f.logicalName.equals( logicalName ) ).map( f -> f.name ).findFirst().orElse( null );
     }
 
 
@@ -367,28 +365,28 @@ public class MongoEntity extends AbstractQueryableTable implements TranslatableT
      *
      * @param <T> element type
      */
-    public static class MongoQueryable<T> extends AbstractTableQueryable<T> {
+    public static class MongoQueryable<T> extends AbstractEntityQueryable<T, MongoEntity> {
 
-        MongoQueryable( DataContext dataContext, SchemaPlus schema, MongoEntity table, String tableName ) {
-            super( dataContext, schema, table, tableName );
+        MongoQueryable( DataContext dataContext, Snapshot snapshot, MongoEntity entity ) {
+            super( dataContext, snapshot, entity );
         }
 
 
         @Override
         public Enumerator<T> enumerator() {
             //noinspection unchecked
-            final Enumerable<T> enumerable = (Enumerable<T>) getTable().find( getMongoDb(), getTable(), null, null, null, null );
+            final Enumerable<T> enumerable = (Enumerable<T>) getEntity().find( getMongoDb(), getEntity(), null, null, null );
             return enumerable.enumerator();
         }
 
 
         private MongoDatabase getMongoDb() {
-            return schema.unwrap( MongoSchema.class ).database;
+            return entity.mongoNamespace.database;
         }
 
 
-        private MongoEntity getTable() {
-            return (MongoEntity) table;
+        private MongoEntity getEntity() {
+            return entity;
         }
 
 
@@ -398,26 +396,24 @@ public class MongoEntity extends AbstractQueryableTable implements TranslatableT
          * @see MongoMethod#MONGO_QUERYABLE_AGGREGATE
          */
         @SuppressWarnings("UnusedDeclaration")
-        public Enumerable<Object> aggregate( List<Map.Entry<String, Class>> fields, List<Map.Entry<String, Class>> arrayClass, List<String> operations, List<String> preProjections, List<String> logicalCols ) {
-            ClientSession session = getTable().getTransactionProvider().getSession( dataContext.getStatement().getTransaction().getXid() );
-            dataContext.getStatement().getTransaction().registerInvolvedAdapter( AdapterManager.getInstance().getStore( this.getTable().getStoreId() ) );
+        public Enumerable<PolyValue[]> aggregate( MongoTupleType tupleType, List<String> operations, List<String> preProjections, List<String> logicalCols ) {
+            ClientSession session = getEntity().getTransactionProvider().getSession( dataContext.getStatement().getTransaction().getXid() );
+            dataContext.getStatement().getTransaction().registerInvolvedAdapter( AdapterManager.getInstance().getStore( (int) this.getEntity().getStoreId() ).orElseThrow() );
 
-            Map<Long, Object> values = new HashMap<>();
+            Map<Long, PolyValue> values = new HashMap<>();
             if ( dataContext.getParameterValues().size() == 1 ) {
                 values = dataContext.getParameterValues().get( 0 );
             }
 
-            return getTable().aggregate(
+            return getEntity().aggregate(
                     dataContext,
                     session,
                     getMongoDb(),
-                    getTable(),
-                    fields,
-                    arrayClass,
+                    getEntity(),
+                    tupleType,
                     operations,
                     values,
-                    preProjections.stream().map( BsonDocument::parse ).collect( Collectors.toList() ),
-                    logicalCols );
+                    preProjections.stream().map( BsonDocument::parse ).toList() );
         }
 
 
@@ -426,13 +422,13 @@ public class MongoEntity extends AbstractQueryableTable implements TranslatableT
          *
          * @param filterJson Filter document
          * @param projectJson Projection document
-         * @param fields List of expected fields (and their types)
+         * @param tupleType List of expected fields (and their types)
          * @return result of mongo query
          * @see MongoMethod#MONGO_QUERYABLE_FIND
          */
         @SuppressWarnings("UnusedDeclaration")
-        public Enumerable<Object> find( String filterJson, String projectJson, List<Map.Entry<String, Class>> fields, List<Map.Entry<String, Class>> arrayClasses ) {
-            return getTable().find( getMongoDb(), getTable(), filterJson, projectJson, fields, arrayClasses );
+        public Enumerable<PolyValue[]> find( String filterJson, String projectJson, MongoTupleType tupleType ) {
+            return getEntity().find( getMongoDb(), getEntity(), filterJson, projectJson, tupleType );
         }
 
 
@@ -446,73 +442,72 @@ public class MongoEntity extends AbstractQueryableTable implements TranslatableT
          */
         @SuppressWarnings("UnusedDeclaration")
         public Enumerable<Object> handleDirectDML( Operation operation, String filter, List<String> operations, boolean onlyOne, boolean needsDocument ) {
-            MongoEntity mongoEntity = getTable();
             PolyXid xid = dataContext.getStatement().getTransaction().getXid();
-            dataContext.getStatement().getTransaction().registerInvolvedAdapter( AdapterManager.getInstance().getStore( mongoEntity.getStoreId() ) );
-            GridFSBucket bucket = mongoEntity.getMongoSchema().getBucket();
+            dataContext.getStatement().getTransaction().registerInvolvedAdapter( AdapterManager.getInstance().getStore( entity.getAdapterId() ).orElseThrow() );
+            GridFSBucket bucket = entity.getMongoNamespace().getBucket();
 
             try {
-                final long changes = doDML( operation, filter, operations, onlyOne, needsDocument, mongoEntity, xid, bucket );
+                final long changes = doDML( operation, filter, operations, onlyOne, needsDocument, xid, bucket );
 
-                return Linq4j.asEnumerable( Collections.singletonList( changes ) );
+                return Linq4j.asEnumerable( Collections.singletonList( new PolyValue[]{ PolyLong.of( changes ) } ) );
             } catch ( MongoException e ) {
-                mongoEntity.getTransactionProvider().rollback( xid );
+                entity.getTransactionProvider().rollback( xid );
                 log.warn( "Failed" );
                 log.warn( String.format( "op: %s\nfilter: %s\nops: [%s]", operation.name(), filter, String.join( ";", operations ) ) );
                 log.warn( e.getMessage() );
-                throw new RuntimeException( e.getMessage(), e );
+                throw new GenericRuntimeException( e.getMessage(), e );
             }
         }
 
 
-        private long doDML( Operation operation, String filter, List<String> operations, boolean onlyOne, boolean needsDocument, MongoEntity mongoEntity, PolyXid xid, GridFSBucket bucket ) {
-            ClientSession session = mongoEntity.getTransactionProvider().startTransaction( xid, true );
+        private long doDML( Operation operation, String filter, List<String> operations, boolean onlyOne, boolean needsDocument, PolyXid xid, GridFSBucket bucket ) {
+            ClientSession session = entity.getTransactionProvider().startTransaction( xid, true );
 
             long changes = 0;
             switch ( operation ) {
                 case INSERT:
-                    if ( dataContext.getParameterValues().size() != 0 ) {
+                    if ( !dataContext.getParameterValues().isEmpty() ) {
                         assert operations.size() == 1;
                         // prepared
-                        MongoDynamic util = new MongoDynamic( BsonDocument.parse( operations.get( 0 ) ), bucket, dataContext );
+                        MongoDynamic util = MongoDynamic.create( BsonDocument.parse( operations.get( 0 ) ), bucket, getEntity().getDataModel() );
                         List<Document> inserts = util.getAll( dataContext.getParameterValues() );
-                        mongoEntity.getCollection().insertMany( session, inserts );
+                        entity.getCollection().insertMany( session, inserts );
                         return inserts.size();
                     } else {
                         // direct
-                        List<Document> docs = operations.stream().map( BsonDocument::parse ).map( BsonUtil::asDocument ).collect( Collectors.toList() );
-                        mongoEntity.getCollection().insertMany( session, docs );
+                        List<Document> docs = operations.stream().map( BsonDocument::parse ).map( BsonUtil::asDocument ).toList();
+                        entity.getCollection().insertMany( session, docs );
                         return docs.size();
                     }
 
                 case UPDATE:
                     assert operations.size() == 1;
                     // we use only update docs
-                    if ( dataContext.getParameterValues().size() != 0 ) {
+                    if ( !dataContext.getParameterValues().isEmpty() ) {
                         // prepared we use document update not pipeline
-                        MongoDynamic filterUtil = new MongoDynamic( BsonDocument.parse( filter ), bucket, dataContext );
-                        MongoDynamic docUtil = new MongoDynamic( BsonDocument.parse( operations.get( 0 ) ), bucket, dataContext );
-                        for ( Map<Long, Object> parameterValue : dataContext.getParameterValues() ) {
+                        MongoDynamic filterUtil = new MongoDynamic( BsonDocument.parse( filter ), bucket );
+                        MongoDynamic docUtil = new MongoDynamic( BsonDocument.parse( operations.get( 0 ) ), bucket );
+                        for ( Map<Long, PolyValue> parameterValue : dataContext.getParameterValues() ) {
                             if ( onlyOne ) {
                                 if ( needsDocument ) {
-                                    changes += mongoEntity
+                                    changes += entity
                                             .getCollection()
                                             .updateOne( session, filterUtil.insert( parameterValue ), docUtil.insert( parameterValue ) )
                                             .getModifiedCount();
                                 } else {
-                                    changes += mongoEntity
+                                    changes += entity
                                             .getCollection()
                                             .updateOne( session, filterUtil.insert( parameterValue ), Collections.singletonList( docUtil.insert( parameterValue ) ) )
                                             .getModifiedCount();
                                 }
                             } else {
                                 if ( needsDocument ) {
-                                    changes += mongoEntity
+                                    changes += entity
                                             .getCollection()
                                             .updateMany( session, filterUtil.insert( parameterValue ), docUtil.insert( parameterValue ) )
                                             .getModifiedCount();
                                 } else {
-                                    changes += mongoEntity
+                                    changes += entity
                                             .getCollection()
                                             .updateMany( session, filterUtil.insert( parameterValue ), Collections.singletonList( docUtil.insert( parameterValue ) ) )
                                             .getModifiedCount();
@@ -522,14 +517,14 @@ public class MongoEntity extends AbstractQueryableTable implements TranslatableT
                     } else {
                         // direct
                         if ( onlyOne ) {
-                            changes = mongoEntity
+                            changes = entity
                                     .getCollection()
-                                    .updateOne( session, BsonDocument.parse( filter ), BsonDocument.parse( operations.get( 0 ) ) )
+                                    .updateOne( session, BsonDocument.parse( filter ), List.of( BsonDocument.parse( operations.get( 0 ) ) ) )
                                     .getModifiedCount();
                         } else {
-                            changes = mongoEntity
+                            changes = entity
                                     .getCollection()
-                                    .updateMany( session, BsonDocument.parse( filter ), BsonDocument.parse( operations.get( 0 ) ) )
+                                    .updateMany( session, BsonDocument.parse( filter ), List.of( BsonDocument.parse( operations.get( 0 ) ) ) )
                                     .getModifiedCount();
                         }
 
@@ -537,9 +532,9 @@ public class MongoEntity extends AbstractQueryableTable implements TranslatableT
                     break;
 
                 case DELETE:
-                    if ( dataContext.getParameterValues().size() != 0 ) {
+                    if ( !dataContext.getParameterValues().isEmpty() ) {
                         // prepared
-                        MongoDynamic filterUtil = new MongoDynamic( BsonDocument.parse( filter ), bucket, dataContext );
+                        MongoDynamic filterUtil = new MongoDynamic( BsonDocument.parse( filter ), bucket );
                         List<? extends WriteModel<Document>> filters;
                         if ( onlyOne ) {
                             filters = filterUtil.getAll( dataContext.getParameterValues(), DeleteOneModel::new );
@@ -547,16 +542,16 @@ public class MongoEntity extends AbstractQueryableTable implements TranslatableT
                             filters = filterUtil.getAll( dataContext.getParameterValues(), DeleteManyModel::new );
                         }
 
-                        changes = mongoEntity.getCollection().bulkWrite( session, filters ).getDeletedCount();
+                        changes = entity.getCollection().bulkWrite( session, filters ).getDeletedCount();
                     } else {
                         // direct
                         if ( onlyOne ) {
-                            changes = mongoEntity
+                            changes = entity
                                     .getCollection()
                                     .deleteOne( session, BsonDocument.parse( filter ) )
                                     .getDeletedCount();
                         } else {
-                            changes = mongoEntity
+                            changes = entity
                                     .getCollection()
                                     .deleteMany( session, BsonDocument.parse( filter ) )
                                     .getDeletedCount();
@@ -565,7 +560,7 @@ public class MongoEntity extends AbstractQueryableTable implements TranslatableT
                     break;
 
                 case MERGE:
-                    throw new RuntimeException( "MERGE IS NOT SUPPORTED" );
+                    throw new GenericRuntimeException( "MERGE IS NOT SUPPORTED" );
             }
             return changes;
 
