@@ -1,5 +1,5 @@
 /*
- * Copyright 2019-2023 The Polypheny Project
+ * Copyright 2019-2024 The Polypheny Project
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -36,10 +36,12 @@ import org.bson.BsonString;
 import org.bson.BsonType;
 import org.bson.BsonValue;
 import org.bson.Document;
-import org.polypheny.db.adapter.DataContext;
 import org.polypheny.db.adapter.mongodb.bson.BsonDynamic;
 import org.polypheny.db.adapter.mongodb.bson.BsonFunctionHelper;
+import org.polypheny.db.catalog.logistic.DataModel;
+import org.polypheny.db.functions.PolyValueFunctions;
 import org.polypheny.db.type.PolyType;
+import org.polypheny.db.type.entity.PolyValue;
 import org.polypheny.db.util.BsonUtil;
 
 
@@ -54,24 +56,30 @@ public class MongoDynamic {
     private final Map<Long, List<ArrayWrapper>> arrayHandles = new HashMap<>(); // parent, index,
 
     private final Map<Long, List<KeyWrapper>> keyHandles = new HashMap<>(); // parent, index,
-    private final Map<Long, Function<Object, BsonValue>> transformerMap = new HashMap<>();
-    private final GridFSBucket bucket;
+    private final Map<Long, Function<PolyValue, BsonValue>> transformers = new HashMap<>();
+    protected final GridFSBucket bucket;
     private final BsonDocument document;
     private final Map<Long, Boolean> isRegexMap = new HashMap<>();
     private final Map<Long, Boolean> isFuncMap = new HashMap<>();
-    private final DataContext dataContext;
     private final boolean isProject;
-    private final Map<Long, Boolean> isValueMap = new HashMap<>();
 
     private final Map<Long, String> keyMap = new HashMap<>();
+    private final Map<Long, String> functionNames = new HashMap<>();
 
 
-    public MongoDynamic( BsonDocument document, GridFSBucket bucket, DataContext dataContext ) {
-        this.dataContext = dataContext;
+    public MongoDynamic( BsonDocument document, GridFSBucket bucket ) {
         this.document = document.clone();
         this.bucket = bucket;
         this.isProject = !document.isEmpty() && document.getFirstKey().equals( "$project" );
         this.document.forEach( ( k, bsonValue ) -> replaceDynamic( bsonValue, this.document, k, true, false ) );
+    }
+
+
+    public static MongoDynamic create( BsonDocument document, GridFSBucket bucket, DataModel dataModel ) {
+        if ( dataModel == DataModel.DOCUMENT ) {
+            return new MongoDocumentDynamic( document, bucket, DataModel.DOCUMENT );
+        }
+        return new MongoDynamic( document, bucket );
     }
 
 
@@ -114,8 +122,7 @@ public class MongoDynamic {
         BsonValue bsonIndex = preDocument.get( "_dyn" );
         Boolean isRegex = preDocument.get( "_reg" ).asBoolean().getValue();
         Boolean isFunction = preDocument.get( "_func" ).asBoolean().getValue();
-        Boolean isValue = preDocument.get( "_isVal" ).asBoolean().getValue();
-        String keyName = preDocument.get( "_key" ).asString().getValue();
+        String functionName = preDocument.get( "_functionName" ).isNull() ? null : preDocument.get( "_functionName" ).asString().getValue();
         long pos;
         if ( bsonIndex.isInt64() ) {
             pos = bsonIndex.asInt64().getValue();
@@ -125,11 +132,11 @@ public class MongoDynamic {
         Queue<PolyType> polyTypes = Arrays.stream( preDocument.get( "_type" ).asString().getValue().split( "\\$" ) ).map( PolyType::valueOf ).collect( Collectors.toCollection( LinkedList::new ) );
 
         if ( isDoc ) {
-            addDocHandle( pos, (BsonDocument) parent, (String) key, polyTypes, isRegex, isFunction, isValue, keyName );
+            addDocHandle( pos, (BsonDocument) parent, (String) key, polyTypes, isRegex, isFunction, functionName );
         } else if ( isKey ) {
-            addKeyHandle( pos, (BsonDocument) parent, polyTypes, isRegex, isFunction, isValue, keyName );
+            addKeyHandle( pos, (BsonDocument) parent, polyTypes, isRegex, isFunction, functionName );
         } else {
-            addArrayHandle( pos, (BsonArray) parent, (int) key, polyTypes, isRegex, isFunction, isValue, keyName );
+            addArrayHandle( pos, (BsonArray) parent, (int) key, polyTypes, isRegex, isFunction, functionName );
         }
     }
 
@@ -161,19 +168,19 @@ public class MongoDynamic {
      * @param types type of the object itself, to retrieve the correct MongoDB type
      * @param isRegex flag if the BsonDynamic is a regex, which needs to adjusted
      * @param isFunction flag if the BsonDynamic is defined function, which has to be retrieved uniquely
-     * @param isValue
+     * @param functionName
      */
-    public void addDocHandle( long index, BsonDocument doc, String key, Queue<PolyType> types, Boolean isRegex, Boolean isFunction, Boolean isValue, String keyName ) {
+    public void addDocHandle( long index, BsonDocument doc, String key, Queue<PolyType> types, Boolean isRegex, Boolean isFunction, String functionName ) {
         if ( !arrayHandles.containsKey( index ) ) {
-            initMaps( index, types, isRegex, isFunction, isValue, keyName );
+            initMaps( index, types, isRegex, isFunction, functionName );
         }
         this.docHandles.get( index ).add( new DocWrapper( key, doc ) );
     }
 
 
-    public void addKeyHandle( long index, BsonDocument doc, Queue<PolyType> types, Boolean isRegex, Boolean isFunction, Boolean isValue, String keyName ) {
+    public void addKeyHandle( long index, BsonDocument doc, Queue<PolyType> types, Boolean isRegex, Boolean isFunction, String functionName ) {
         if ( !arrayHandles.containsKey( index ) ) {
-            initMaps( index, types, isRegex, isFunction, isValue, keyName );
+            initMaps( index, types, isRegex, isFunction, functionName );
         }
         this.keyHandles.get( index ).add(
                 new KeyWrapper(
@@ -183,7 +190,7 @@ public class MongoDynamic {
                                 .stream()
                                 .flatMap( d -> d.getValue().stream() )
                                 .filter( w -> w.key.equals( doc.getFirstKey() ) )
-                                .collect( Collectors.toList() ) ) );
+                                .toList() ) );
     }
 
 
@@ -196,24 +203,26 @@ public class MongoDynamic {
      * @param types type of the object itself, to retrieve the correct MongoDB type
      * @param isRegex flag if the BsonDynamic is a regex, which needs to adjusted
      * @param isFunction flag if the BsonDynamic is defined function, which has to be retrieved uniquely
+     * @param functionName
      */
-    public void addArrayHandle( long index, BsonArray array, int pos, Queue<PolyType> types, Boolean isRegex, Boolean isFunction, Boolean isValue, String keyName ) {
+    public void addArrayHandle( long index, BsonArray array, int pos, Queue<PolyType> types, Boolean isRegex, Boolean isFunction, String functionName ) {
         if ( !arrayHandles.containsKey( index ) ) {
-            initMaps( index, types, isRegex, isFunction, isValue, keyName );
+            initMaps( index, types, isRegex, isFunction, functionName );
         }
         this.arrayHandles.get( index ).add( new ArrayWrapper( pos, array ) );
     }
 
 
-    private void initMaps( long index, Queue<PolyType> types, Boolean isRegex, Boolean isFunction, Boolean isValue, String keyName ) {
-        this.transformerMap.put( index, BsonUtil.getBsonTransformer( types, bucket ) );
+    private void initMaps( long index, Queue<PolyType> types, Boolean isRegex, Boolean isFunction, String functionName ) {
+        this.transformers.put( index, BsonUtil.getBsonTransformer( types, bucket ) );
         this.isRegexMap.put( index, isRegex );
         this.isFuncMap.put( index, isFunction );
-        this.isValueMap.put( index, isValue );
-        this.keyMap.put( index, keyName );
         this.docHandles.put( index, new ArrayList<>() );
         this.arrayHandles.put( index, new ArrayList<>() );
         this.keyHandles.put( index, new ArrayList<>() );
+        if ( functionName != null ) {
+            this.functionNames.put( index, functionName );
+        }
     }
 
 
@@ -223,38 +232,31 @@ public class MongoDynamic {
      * @param parameterValues the dynamic parameters
      * @return a final BsonObject with the correct values inserted
      */
-    public BsonDocument insert( Map<Long, Object> parameterValues ) {
-        for ( Entry<Long, Object> entry : parameterValues.entrySet() ) {
+    public BsonDocument insert( Map<Long, PolyValue> parameterValues ) {
+        for ( Entry<Long, PolyValue> entry : parameterValues.entrySet() ) {
             if ( arrayHandles.containsKey( entry.getKey() ) ) {
                 Boolean isRegex = isRegexMap.get( entry.getKey() );
                 Boolean isFunction = isFuncMap.get( entry.getKey() );
-                boolean isValue = isValueMap.get( entry.getKey() );
-                String key = keyMap.get( entry.getKey() );
+                String functionName = functionNames.get( entry.getKey() );
 
                 if ( isRegex ) {
-                    Consumer<Wrapper> task = el -> el.insert( BsonUtil.replaceLikeWithRegex( (String) entry.getValue() ) );
+                    Consumer<Wrapper> task = el -> el.insert( BsonUtil.replaceLikeWithRegex( entry.getValue().asString().value ) );
                     arrayHandles.get( entry.getKey() ).forEach( task );
                     docHandles.get( entry.getKey() ).forEach( task );
                     keyHandles.get( entry.getKey() ).forEach( task );
                 } else if ( isFunction ) {
                     // function is always part of a document
                     docHandles.get( entry.getKey() ).forEach( el -> el.insert( new BsonString( BsonFunctionHelper.getUsedFunction( entry.getValue() ) ) ) );
-                } else if ( isValue ) {
-                    Function<Object, BsonValue> transformer = transformerMap.get( entry.getKey() );
-                    Consumer<Wrapper> task = el -> el.insert(
-                            new BsonString( key
-                                    + "."
-                                    + transformer.apply( entry.getValue() ).asArray().stream().map( v -> v.asString().getValue() ).collect( Collectors.joining( "." ) ) ) );
-                    docHandles.get( entry.getKey() ).forEach( task );
-                    arrayHandles.get( entry.getKey() ).forEach( task );
-                    keyHandles.get( entry.getKey() ).forEach( task );
                 } else {
-                    Function<Object, BsonValue> transformer = transformerMap.get( entry.getKey() );
+                    Function<PolyValue, BsonValue> transformer = transformers.get( entry.getKey() );
                     Consumer<Wrapper> task;
+
+                    Function<PolyValue, PolyValue> wrapper = functionName != null ? PolyValueFunctions.pickWrapper( functionName ) : e -> e;
+
                     if ( this.isProject ) {
-                        task = el -> el.insert( new BsonDocument( "$literal", transformer.apply( entry.getValue() ) ) );
+                        task = el -> el.insert( new BsonDocument( "$literal", transformer.apply( wrapper.apply( entry.getValue() ) ) ) );
                     } else {
-                        task = el -> el.insert( transformer.apply( entry.getValue() ) );
+                        task = el -> el.insert( transformer.apply( wrapper.apply( entry.getValue() ) ) );
                     }
                     arrayHandles.get( entry.getKey() ).forEach( task );
                     docHandles.get( entry.getKey() ).forEach( task );
@@ -263,7 +265,35 @@ public class MongoDynamic {
                 }
             }
         }
-        return document.clone();
+        return unwrapDynamicKeys( document.clone() ).asDocument();
+    }
+
+
+    private BsonValue unwrapDynamicKeys( BsonValue value ) {
+        if ( value.getBsonType() == BsonType.DOCUMENT ) {
+            BsonDocument doc = value.asDocument();
+            BsonDocument newDoc = new BsonDocument();
+            for ( Entry<String, BsonValue> entry : doc.entrySet() ) {
+                if ( entry.getKey().startsWith( "_kv_" ) ) {
+                    if ( entry.getValue().isDocument() ) {
+                        newDoc.put( entry.getValue().asDocument().get( "_k_" ).asString().getValue(), entry.getValue().asDocument().get( "_v_" ) );
+                    } else {
+                        newDoc.put( entry.getValue().asArray().get( 0 ).asDocument().get( "_k_" ).asString().getValue(), entry.getValue().asArray().get( 0 ).asDocument().get( "_v_" ) );
+                    }
+
+                } else {
+                    newDoc.put( entry.getKey(), unwrapDynamicKeys( entry.getValue() ) );
+                }
+            }
+            return newDoc;
+        } else if ( value.getBsonType() == BsonType.ARRAY ) {
+            BsonArray array = value.asArray();
+            for ( int i = 0; i < array.size(); i++ ) {
+                array.set( i, unwrapDynamicKeys( array.get( i ) ) );
+            }
+            return array;
+        }
+        return value;
     }
 
 
@@ -275,15 +305,15 @@ public class MongoDynamic {
      * @return a list of rows, which can directly be inserted
      */
     public List<? extends WriteModel<Document>> getAll(
-            List<Map<Long, Object>> parameterValues,
+            List<Map<Long, PolyValue>> parameterValues,
             Function<Document, ? extends WriteModel<Document>> constructor ) {
         return parameterValues.stream()
                 .map( value -> constructor.apply( BsonUtil.asDocument( insert( value ) ) ) )
-                .collect( Collectors.toList() );
+                .toList();
     }
 
 
-    public List<Document> getAll( List<Map<Long, Object>> parameterValues ) {
+    public List<Document> getAll( List<Map<Long, PolyValue>> parameterValues ) {
         return parameterValues.stream().map( value -> BsonUtil.asDocument( insert( value ) ) ).collect( Collectors.toList() );
     }
 
@@ -325,16 +355,7 @@ public class MongoDynamic {
      * Helper class which holds replace information for a BsonDocument, which has one or multiple dynamic children
      * and defines how the child can be replaced.
      */
-    static class ArrayWrapper implements Wrapper {
-
-        final int index;
-        final BsonArray array;
-
-
-        ArrayWrapper( int index, BsonArray array ) {
-            this.index = index;
-            this.array = array;
-        }
+    record ArrayWrapper(int index, BsonArray array) implements Wrapper {
 
 
         @Override
@@ -345,19 +366,7 @@ public class MongoDynamic {
     }
 
 
-    static class KeyWrapper implements Wrapper {
-
-        final int index;
-        final BsonDocument document;
-
-        final List<DocWrapper> children;
-
-
-        KeyWrapper( int index, BsonDocument document, List<DocWrapper> children ) {
-            this.index = index;
-            this.document = document;
-            this.children = children;
-        }
+    record KeyWrapper(int index, BsonDocument document, List<DocWrapper> children) implements Wrapper {
 
 
         @Override
@@ -369,6 +378,22 @@ public class MongoDynamic {
             children.forEach( c -> c.setKey( newKey ) );
             document.put( newKey, temp );
         }
+
+    }
+
+
+    public static class MongoDocumentDynamic extends MongoDynamic {
+
+        public MongoDocumentDynamic( BsonDocument document, GridFSBucket bucket, DataModel dataModel ) {
+            super( document, bucket );
+        }
+
+
+        @Override
+        public List<Document> getAll( List<Map<Long, PolyValue>> parameterValues ) {
+            return parameterValues.stream().flatMap( e -> e.entrySet().stream().map( v -> Document.parse( v.getValue().asDocument().toJson() ) ) ).collect( Collectors.toList() );
+        }
+
 
     }
 
