@@ -1,5 +1,5 @@
 /*
- * Copyright 2019-2023 The Polypheny Project
+ * Copyright 2019-2024 The Polypheny Project
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,35 +18,28 @@ package org.polypheny.db.adapter.neo4j;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
-import org.apache.calcite.linq4j.function.Function1;
 import org.apache.calcite.linq4j.tree.BlockBuilder;
 import org.apache.calcite.linq4j.tree.Expression;
 import org.apache.calcite.linq4j.tree.Expressions;
-import org.polypheny.db.adapter.DataContext;
-import org.polypheny.db.adapter.enumerable.EnumUtils;
-import org.polypheny.db.adapter.enumerable.EnumerableAlg;
-import org.polypheny.db.adapter.enumerable.EnumerableAlgImplementor;
-import org.polypheny.db.adapter.enumerable.JavaRowFormat;
-import org.polypheny.db.adapter.enumerable.PhysType;
-import org.polypheny.db.adapter.enumerable.PhysTypeImpl;
-import org.polypheny.db.adapter.neo4j.NeoGraph.NeoQueryable;
-import org.polypheny.db.adapter.neo4j.util.NeoUtil;
+import org.polypheny.db.adapter.neo4j.types.NestedPolyType;
 import org.polypheny.db.algebra.AlgNode;
 import org.polypheny.db.algebra.convert.ConverterImpl;
+import org.polypheny.db.algebra.enumerable.EnumUtils;
+import org.polypheny.db.algebra.enumerable.EnumerableAlg;
+import org.polypheny.db.algebra.enumerable.EnumerableAlgImplementor;
+import org.polypheny.db.algebra.enumerable.JavaTupleFormat;
+import org.polypheny.db.algebra.enumerable.PhysType;
+import org.polypheny.db.algebra.enumerable.PhysTypeImpl;
 import org.polypheny.db.algebra.metadata.AlgMetadataQuery;
 import org.polypheny.db.algebra.type.AlgDataType;
-import org.polypheny.db.plan.AlgOptCluster;
+import org.polypheny.db.plan.AlgCluster;
 import org.polypheny.db.plan.AlgOptCost;
-import org.polypheny.db.plan.AlgOptPlanner;
+import org.polypheny.db.plan.AlgPlanner;
 import org.polypheny.db.plan.AlgTraitSet;
 import org.polypheny.db.plan.ConventionTraitDef;
-import org.polypheny.db.schema.ModelTrait;
-import org.polypheny.db.schema.SchemaPlus;
-import org.polypheny.db.schema.Schemas;
+import org.polypheny.db.schema.trait.ModelTrait;
 import org.polypheny.db.type.PolyType;
 import org.polypheny.db.util.BuiltInMethod;
-import org.polypheny.db.util.Pair;
 
 
 /**
@@ -61,13 +54,13 @@ public class NeoToEnumerableConverter extends ConverterImpl implements Enumerabl
      * @param traits the output traits of this converter
      * @param child child alg (provides input traits)
      */
-    protected NeoToEnumerableConverter( AlgOptCluster cluster, AlgTraitSet traits, AlgNode child ) {
+    protected NeoToEnumerableConverter( AlgCluster cluster, AlgTraitSet traits, AlgNode child ) {
         super( cluster, ConventionTraitDef.INSTANCE, traits, child );
     }
 
 
     @Override
-    public AlgOptCost computeSelfCost( AlgOptPlanner planner, AlgMetadataQuery mq ) {
+    public AlgOptCost computeSelfCost( AlgPlanner planner, AlgMetadataQuery mq ) {
         return super.computeSelfCost( planner, mq ).multiplyBy( 0.8 );
     }
 
@@ -97,45 +90,36 @@ public class NeoToEnumerableConverter extends ConverterImpl implements Enumerabl
 
         graphImplementor.visitChild( 0, getInput() );
 
-        final AlgDataType rowType = getRowType();
+        final AlgDataType rowType = getTupleType();
 
-        // PhysType is Enumerable Adapter class that maps database types (getRowType) with physical Java types (getJavaTypes())
-        final PhysType physType = PhysTypeImpl.of( implementor.getTypeFactory(), rowType, pref.prefer( JavaRowFormat.ARRAY ) );
+        // PhysType is Enumerable Adapter class that maps database types (getTupleType) with physical Java types (getJavaTypes())
+        final PhysType physType = PhysTypeImpl.of( implementor.getTypeFactory(), rowType, pref.prefer( JavaTupleFormat.ARRAY ) );
 
-        final Expression graph = blockBuilder.append( "graph", Expressions.convert_(
-                Expressions.call( Schemas.class, "graph", DataContext.ROOT,
-                        Expressions.convert_(
-                                Expressions.call(
-                                        Expressions.call(
-                                                DataContext.ROOT,
-                                                BuiltInMethod.DATA_CONTEXT_GET_ROOT_SCHEMA.method ),
-                                        BuiltInMethod.SCHEMA_GET_SUB_SCHEMA.method,
-                                        Expressions.constant( graphImplementor.getGraph().name, String.class ) ), SchemaPlus.class ) ), NeoQueryable.class ) );
+        final Expression graph = blockBuilder.append( "graph", graphImplementor.getGraph().asExpression() );
 
         Expression enumerable;
-        if ( graphImplementor.isAll() && rowType.getFieldCount() == 1 && rowType.getFieldList().get( 0 ).getType().getPolyType() == PolyType.GRAPH ) {
-            Pair<String, String> queries = graphImplementor.getAllQueries();
+
+        final Expression types = NestedPolyType.from( rowType ).asExpression();
+
+        final Expression parameterClasses = Expressions.constant( null );
+
+        if ( graphImplementor.statements.isEmpty() && graphImplementor.isAll() ) {
+            String nodes = String.format( "MATCH (n:%s) RETURN n", graphImplementor.getGraph().mappingLabel );
+            String edges = String.format( "MATCH (n:%s)-[e]->(m) RETURN e", graphImplementor.getGraph().mappingLabel );
 
             enumerable = blockBuilder.append(
                     blockBuilder.newName( "enumerable" ),
                     Expressions.call(
                             graph,
-                            NeoMethod.GRAPH_ALL.method, Expressions.constant( queries.left ), Expressions.constant( queries.right ) ) );
-
+                            NeoMethod.GRAPH_ALL.method, Expressions.constant( nodes ), Expressions.constant( edges ) ) );
         } else {
-            final Expression fields = getFields( blockBuilder, rowType, AlgDataType::getPolyType );
-
-            final Expression arrayFields = getFields( blockBuilder, rowType, NeoUtil::getComponentTypeOrParent );
-
-            final Expression parameterClasses = Expressions.constant( null );
-
             final String query = graphImplementor.build();
 
             enumerable = blockBuilder.append(
                     blockBuilder.newName( "enumerable" ),
                     Expressions.call(
                             graph,
-                            NeoMethod.GRAPH_EXECUTE.method, Expressions.constant( query ), fields, arrayFields, parameterClasses ) );
+                            NeoMethod.GRAPH_EXECUTE.method, Expressions.constant( query ), types, parameterClasses ) );
         }
 
         blockBuilder.add( Expressions.return_( null, enumerable ) );
@@ -145,7 +129,7 @@ public class NeoToEnumerableConverter extends ConverterImpl implements Enumerabl
 
 
     /**
-     * Generates the relational specific code representation of the attached child nodes.
+     * Generates the algebra specific code representation of the attached child nodes.
      *
      * @param implementor is used build the code snippets by recursively moving through them
      * @param pref preferred result format, e.g. when SCALAR -> single result gets returned as single element, if ARRAY it is wrapped in an array
@@ -157,16 +141,14 @@ public class NeoToEnumerableConverter extends ConverterImpl implements Enumerabl
 
         neoImplementor.visitChild( 0, getInput() );
 
-        final AlgDataType rowType = getRowType();
+        final AlgDataType rowType = getTupleType();
 
-        // PhysType is Enumerable Adapter class that maps SQL types (getRowType) with physical Java types (getJavaTypes())
-        final PhysType physType = PhysTypeImpl.of( implementor.getTypeFactory(), rowType, pref.prefer( JavaRowFormat.ARRAY ) );
+        // PhysType is Enumerable Adapter class that maps SQL types (getTupleType) with physical Java types (getJavaTypes())
+        final PhysType physType = PhysTypeImpl.of( implementor.getTypeFactory(), rowType, pref.prefer( JavaTupleFormat.ARRAY ) );
 
-        final Expression table = blockBuilder.append( "table", neoImplementor.getTable().getExpression( NeoEntity.NeoQueryable.class ) );
+        final Expression entity = blockBuilder.append( "entity", neoImplementor.getEntity().asExpression( NeoEntity.NeoQueryable.class ) );
 
-        final Expression fields = getFields( blockBuilder, rowType, AlgDataType::getPolyType );
-
-        final Expression arrayFields = getFields( blockBuilder, rowType, NeoUtil::getComponentTypeOrParent );
+        final Expression types = NestedPolyType.from( rowType ).asExpression();
 
         final Expression parameterClasses = getPolyMap( blockBuilder, neoImplementor.getPreparedTypes() );
 
@@ -175,8 +157,8 @@ public class NeoToEnumerableConverter extends ConverterImpl implements Enumerabl
         final Expression enumerable = blockBuilder.append(
                 blockBuilder.newName( "enumerable" ),
                 Expressions.call(
-                        table,
-                        NeoMethod.EXECUTE.method, Expressions.constant( query ), fields, arrayFields, parameterClasses ) );
+                        entity,
+                        NeoMethod.EXECUTE.method, Expressions.constant( query ), types, parameterClasses ) );
 
         blockBuilder.add( Expressions.return_( null, enumerable ) );
 
@@ -190,7 +172,7 @@ public class NeoToEnumerableConverter extends ConverterImpl implements Enumerabl
      * @param map the target map to transform
      * @return the map in an expression representation
      */
-    private Expression getPolyMap( BlockBuilder builder, Map<Long, Pair<PolyType, PolyType>> map ) {
+    private Expression getPolyMap( BlockBuilder builder, Map<Long, NestedPolyType> map ) {
         return builder.append(
                 builder.newName( "map" ),
                 Expressions.call(
@@ -199,39 +181,8 @@ public class NeoToEnumerableConverter extends ConverterImpl implements Enumerabl
                                 map.entrySet()
                                         .stream()
                                         .map( p ->
-                                                Expressions.call( BuiltInMethod.PAIR_OF.method, Expressions.constant( p.getKey(), Long.class ),
-                                                        getPair( p.getValue(), PolyType.class, PolyType.class ) ) ).collect( Collectors.toList() ) ) ) );
-    }
-
-
-    /**
-     * Returns the provided pair as {@link Expression}.
-     *
-     * @param pair the target pair
-     * @param classLeft class of the left element
-     * @param classRight class of the right element
-     * @return the pair as Expression e.g. <code>Pair.of( (int) 0, (long) 3 )</code>
-     */
-    public <T, E> Expression getPair( Pair<T, E> pair, Class<T> classLeft, Class<E> classRight ) {
-        return Expressions.call( BuiltInMethod.PAIR_OF.method, Expressions.constant( pair.left, classLeft ), Expressions.constant( pair.left, classRight ) );
-    }
-
-
-    /**
-     * Returns the {@link Expression} for the given {@link AlgDataType} where each field is represented as {@link PolyType}.
-     *
-     * @param builder helper builder to generate expressions
-     * @param rowType the RowType to transform
-     * @param typeGetter function, which transforms a {@link AlgDataType} into a matching {@link PolyType}
-     */
-    public Expression getFields( BlockBuilder builder, AlgDataType rowType, Function1<AlgDataType, PolyType> typeGetter ) {
-        return builder.append(
-                builder.newName( "fields" ),
-                EnumUtils.constantArrayList( rowType
-                        .getFieldList()
-                        .stream()
-                        .map( f -> typeGetter.apply( f.getType() ) )
-                        .collect( Collectors.toList() ), PolyType.class ) );
+                                                (Expression) Expressions.call( BuiltInMethod.PAIR_OF.method, Expressions.constant( p.getKey(), Long.class ),
+                                                        p.getValue().asExpression() ) ).toList() ) ) );
     }
 
 
