@@ -1,5 +1,5 @@
 /*
- * Copyright 2019-2023 The Polypheny Project
+ * Copyright 2019-2024 The Polypheny Project
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,44 +17,38 @@
 package org.polypheny.db.sql.language.ddl;
 
 
-import static org.polypheny.db.util.Static.RESOURCE;
-
 import com.google.common.collect.ImmutableList;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
 import java.util.stream.Collectors;
+import lombok.EqualsAndHashCode;
+import lombok.Value;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.calcite.linq4j.Ord;
+import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 import org.polypheny.db.adapter.DataStore;
 import org.polypheny.db.algebra.constant.Kind;
 import org.polypheny.db.catalog.Catalog;
-import org.polypheny.db.catalog.Catalog.PlacementType;
-import org.polypheny.db.catalog.exceptions.EntityAlreadyExistsException;
-import org.polypheny.db.catalog.exceptions.GenericCatalogException;
-import org.polypheny.db.catalog.exceptions.UnknownColumnException;
-import org.polypheny.db.catalog.exceptions.UnknownDatabaseException;
-import org.polypheny.db.catalog.exceptions.UnknownKeyException;
-import org.polypheny.db.catalog.exceptions.UnknownPartitionTypeException;
-import org.polypheny.db.catalog.exceptions.UnknownSchemaException;
-import org.polypheny.db.catalog.exceptions.UnknownTableException;
-import org.polypheny.db.catalog.exceptions.UnknownUserException;
+import org.polypheny.db.catalog.exceptions.GenericRuntimeException;
+import org.polypheny.db.catalog.logistic.PlacementType;
+import org.polypheny.db.catalog.snapshot.Snapshot;
 import org.polypheny.db.ddl.DdlManager;
 import org.polypheny.db.ddl.DdlManager.ColumnTypeInformation;
 import org.polypheny.db.ddl.DdlManager.ConstraintInformation;
 import org.polypheny.db.ddl.DdlManager.FieldInformation;
 import org.polypheny.db.ddl.DdlManager.PartitionInformation;
-import org.polypheny.db.ddl.exception.ColumnNotExistsException;
-import org.polypheny.db.ddl.exception.PartitionGroupNamesNotUniqueException;
 import org.polypheny.db.languages.ParserPos;
-import org.polypheny.db.languages.QueryParameters;
 import org.polypheny.db.nodes.ExecutableStatement;
 import org.polypheny.db.nodes.Identifier;
 import org.polypheny.db.nodes.Node;
 import org.polypheny.db.partition.raw.RawPartitionInformation;
 import org.polypheny.db.prepare.Context;
+import org.polypheny.db.processing.QueryContext.ParsedQueryContext;
 import org.polypheny.db.sql.language.SqlCreate;
 import org.polypheny.db.sql.language.SqlIdentifier;
+import org.polypheny.db.sql.language.SqlLiteral;
 import org.polypheny.db.sql.language.SqlNode;
 import org.polypheny.db.sql.language.SqlNodeList;
 import org.polypheny.db.sql.language.SqlOperator;
@@ -62,7 +56,7 @@ import org.polypheny.db.sql.language.SqlSpecialOperator;
 import org.polypheny.db.sql.language.SqlWriter;
 import org.polypheny.db.transaction.Statement;
 import org.polypheny.db.transaction.TransactionException;
-import org.polypheny.db.util.CoreUtil;
+import org.polypheny.db.type.entity.PolyValue;
 import org.polypheny.db.util.ImmutableNullableList;
 import org.polypheny.db.util.Pair;
 
@@ -70,23 +64,37 @@ import org.polypheny.db.util.Pair;
 /**
  * Parse tree for {@code CREATE TABLE} statement.
  */
+@EqualsAndHashCode(callSuper = true)
 @Slf4j
+@Value
 public class SqlCreateTable extends SqlCreate implements ExecutableStatement {
 
-    private final SqlIdentifier name;
-    private final SqlNodeList columnList;
-    private final SqlNode query;
-    private final SqlIdentifier store;
-    private final SqlIdentifier partitionColumn;
-    private final SqlIdentifier partitionType;
-    private final int numPartitionGroups;
-    private final int numPartitions;
-    private final List<SqlIdentifier> partitionGroupNamesList;
-    private final RawPartitionInformation rawPartitionInfo;
+    SqlIdentifier name;
+    SqlNodeList columns;
 
-    private final List<List<SqlNode>> partitionQualifierList;
+    @Nullable
+    SqlNode query; // for "CREATE TABLE ... AS query"; may be null
+
+    @Nullable
+    SqlIdentifier store; // ON STORE [storeId name];
+
+    @Nullable
+    SqlIdentifier partitionColumn;
+
+    @Nullable
+    SqlIdentifier partitionType; // PARTITION BY (HASH | RANGE | LIST);
+
+    int numPartitionGroups;
+    int numPartitions;
+
+    @Nullable
+    List<SqlIdentifier> partitionGroupNamesList; // can only be used in association with PARTITION BY and PARTITIONS
+    RawPartitionInformation rawPartitionInfo;
+
+    List<List<SqlNode>> partitionQualifierList;
 
     private static final SqlOperator OPERATOR = new SqlSpecialOperator( "CREATE TABLE", Kind.CREATE_TABLE );
+    Snapshot snapshot = Catalog.getInstance().getSnapshot();
 
 
     /**
@@ -97,26 +105,26 @@ public class SqlCreateTable extends SqlCreate implements ExecutableStatement {
             boolean replace,
             boolean ifNotExists,
             SqlIdentifier name,
-            SqlNodeList columnList,
-            SqlNode query,
-            SqlIdentifier store,
-            SqlIdentifier partitionType,
-            SqlIdentifier partitionColumn,
+            @Nullable SqlNodeList columns,
+            @Nullable SqlNode query,
+            @Nullable SqlIdentifier store,
+            @Nullable SqlIdentifier partitionType,
+            @Nullable SqlIdentifier partitionColumn,
             int numPartitionGroups,
             int numPartitions,
-            List<SqlIdentifier> partitionGroupNamesList,
+            @Nullable List<SqlIdentifier> partitionGroupNamesList,
             List<List<SqlNode>> partitionQualifierList,
             RawPartitionInformation rawPartitionInfo ) {
         super( OPERATOR, pos, replace, ifNotExists );
         this.name = Objects.requireNonNull( name );
-        this.columnList = columnList; // May be null
-        this.query = query; // for "CREATE TABLE ... AS query"; may be null
-        this.store = store; // ON STORE [store name]; may be null
-        this.partitionType = partitionType; // PARTITION BY (HASH | RANGE | LIST); may be null
-        this.partitionColumn = partitionColumn; // May be null
-        this.numPartitionGroups = numPartitionGroups; // May be null and can only be used in association with PARTITION BY
+        this.columns = columns;
+        this.query = query;
+        this.store = store;
+        this.partitionType = partitionType;
+        this.partitionColumn = partitionColumn;
+        this.numPartitionGroups = numPartitionGroups;
         this.numPartitions = numPartitions;
-        this.partitionGroupNamesList = partitionGroupNamesList; // May be null and can only be used in association with PARTITION BY and PARTITIONS
+        this.partitionGroupNamesList = partitionGroupNamesList;
         this.partitionQualifierList = partitionQualifierList;
         this.rawPartitionInfo = rawPartitionInfo;
     }
@@ -124,13 +132,13 @@ public class SqlCreateTable extends SqlCreate implements ExecutableStatement {
 
     @Override
     public List<Node> getOperandList() {
-        return ImmutableNullableList.of( name, columnList, query );
+        return ImmutableNullableList.of( name, columns, query );
     }
 
 
     @Override
     public List<SqlNode> getSqlOperandList() {
-        return ImmutableNullableList.of( name, columnList, query );
+        return ImmutableNullableList.of( name, columns, query );
     }
 
 
@@ -142,9 +150,9 @@ public class SqlCreateTable extends SqlCreate implements ExecutableStatement {
             writer.keyword( "IF NOT EXISTS" );
         }
         name.unparse( writer, leftPrec, rightPrec );
-        if ( columnList != null ) {
+        if ( columns != null ) {
             SqlWriter.Frame frame = writer.startList( "(", ")" );
-            for ( SqlNode c : columnList.getSqlList() ) {
+            for ( SqlNode c : columns.getSqlList() ) {
                 writer.sep( "," );
                 c.unparse( writer, 0, 0 );
             }
@@ -200,40 +208,33 @@ public class SqlCreateTable extends SqlCreate implements ExecutableStatement {
 
 
     @Override
-    public void execute( Context context, Statement statement, QueryParameters parameters ) {
+    public void execute( Context context, Statement statement, ParsedQueryContext parsedQueryContext ) {
         if ( query != null ) {
-            throw new RuntimeException( "Not supported yet" );
+            throw new GenericRuntimeException( "Not yet supported" );
         }
-        Catalog catalog = Catalog.getInstance();
+
         String tableName;
-        long schemaId;
+        long namespaceId;
 
-        try {
-            // Cannot use getTable() here since table does not yet exist
-            if ( name.names.size() == 3 ) { // DatabaseName.SchemaName.TableName
-                schemaId = catalog.getSchema( name.names.get( 0 ), name.names.get( 1 ) ).id;
-                tableName = name.names.get( 2 );
-            } else if ( name.names.size() == 2 ) { // SchemaName.TableName
-                schemaId = catalog.getSchema( context.getDatabaseId(), name.names.get( 0 ) ).id;
-                tableName = name.names.get( 1 );
-            } else { // TableName
-                schemaId = catalog.getSchema( context.getDatabaseId(), context.getDefaultSchemaName() ).id;
-                tableName = name.names.get( 0 );
-            }
-        } catch ( UnknownDatabaseException e ) {
-            throw CoreUtil.newContextException( name.getPos(), RESOURCE.databaseNotFound( name.toString() ) );
-        } catch ( UnknownSchemaException e ) {
-            throw CoreUtil.newContextException( name.getPos(), RESOURCE.schemaNotFound( name.toString() ) );
+        // Cannot use getTable() here since table does not yet exist
+        if ( name.names.size() == 2 ) { // NamespaceName.TableName
+            namespaceId = snapshot.getNamespace( name.names.get( 0 ) ).orElseThrow().id;
+            tableName = name.names.get( 1 );
+        } else if ( name.names.size() == 1 ) { // TableName
+            namespaceId = snapshot.getNamespace( context.getDefaultNamespaceName() ).orElseThrow().id;
+            tableName = name.names.get( 0 );
+        } else {
+            throw new GenericRuntimeException( "Invalid table name: " + name );
         }
 
-        List<DataStore> stores = store != null ? ImmutableList.of( getDataStoreInstance( store ) ) : null;
+        List<DataStore<?>> stores = store != null ? ImmutableList.of( getDataStoreInstance( store ) ) : null;
 
         PlacementType placementType = store == null ? PlacementType.AUTOMATIC : PlacementType.MANUAL;
 
         List<FieldInformation> columns = null;
         List<ConstraintInformation> constraints = null;
 
-        if ( columnList != null ) {
+        if ( this.columns != null ) {
             Pair<List<FieldInformation>, List<ConstraintInformation>> columnsConstraints = separateColumnList();
             columns = columnsConstraints.left;
             constraints = columnsConstraints.right;
@@ -241,7 +242,7 @@ public class SqlCreateTable extends SqlCreate implements ExecutableStatement {
 
         try {
             DdlManager.getInstance().createTable(
-                    schemaId,
+                    namespaceId,
                     tableName,
                     columns,
                     constraints,
@@ -251,33 +252,23 @@ public class SqlCreateTable extends SqlCreate implements ExecutableStatement {
                     statement );
 
             if ( partitionType != null ) {
-                DdlManager.getInstance().addPartitioning(
+                context.updateSnapshot();
+                DdlManager.getInstance().createTablePartition(
                         PartitionInformation.fromNodeLists(
-                                getCatalogTable( context, new SqlIdentifier( tableName, ParserPos.ZERO ) ),
+                                getTableFailOnEmpty( context, new SqlIdentifier( tableName, ParserPos.ZERO ) ),
                                 partitionType.getSimple(),
                                 partitionColumn.getSimple(),
                                 partitionGroupNamesList.stream().map( n -> (Identifier) n ).collect( Collectors.toList() ),
                                 numPartitionGroups,
                                 numPartitions,
-                                partitionQualifierList.stream().map( l -> l.stream().map( e -> (Node) e ).collect( Collectors.toList() ) ).collect( Collectors.toList() ), // TODO DL, there needs to be a better way...
+                                partitionQualifierList.stream().map( l -> l.stream().map( e -> (Node) e ).toList() ).toList(),
                                 rawPartitionInfo ),
                         stores,
                         statement );
             }
 
-        } catch ( EntityAlreadyExistsException e ) {
-            throw CoreUtil.newContextException( name.getPos(), RESOURCE.tableExists( tableName ) );
-        } catch ( ColumnNotExistsException e ) {
-            throw CoreUtil.newContextException( partitionColumn.getPos(), RESOURCE.columnNotFoundInTable( e.columnName, e.tableName ) );
-        } catch ( UnknownPartitionTypeException e ) {
-            throw CoreUtil.newContextException( partitionType.getPos(), RESOURCE.unknownPartitionType( partitionType.getSimple() ) );
-        } catch ( PartitionGroupNamesNotUniqueException e ) {
-            throw CoreUtil.newContextException( partitionColumn.getPos(), RESOURCE.partitionNamesNotUnique() );
-        } catch ( GenericCatalogException | UnknownColumnException e ) {
-            // We just added the table/column so it has to exist or we have an internal problem
-            throw new RuntimeException( e );
-        } catch ( UnknownDatabaseException | UnknownTableException | TransactionException | UnknownSchemaException | UnknownUserException | UnknownKeyException e ) {
-            throw new RuntimeException( e );
+        } catch ( TransactionException e ) {
+            throw new GenericRuntimeException( e );
         }
     }
 
@@ -287,11 +278,10 @@ public class SqlCreateTable extends SqlCreate implements ExecutableStatement {
         List<ConstraintInformation> constraintInformation = new ArrayList<>();
 
         int position = 1;
-        for ( Ord<SqlNode> c : Ord.zip( columnList.getSqlList() ) ) {
-            if ( c.e instanceof SqlColumnDeclaration ) {
-                final SqlColumnDeclaration columnDeclaration = (SqlColumnDeclaration) c.e;
+        for ( Ord<SqlNode> c : Ord.zip( columns.getSqlList() ) ) {
+            if ( c.e instanceof SqlColumnDeclaration columnDeclaration ) {
 
-                String defaultValue = columnDeclaration.getExpression() == null ? null : columnDeclaration.getExpression().toString();
+                PolyValue defaultValue = columnDeclaration.getExpression() == null ? null : SqlLiteral.toPoly( columnDeclaration.getExpression() );
 
                 fieldInformation.add(
                         new FieldInformation(
@@ -301,18 +291,10 @@ public class SqlCreateTable extends SqlCreate implements ExecutableStatement {
                                 defaultValue,
                                 position ) );
 
-            } else if ( c.e instanceof SqlKeyConstraint ) {
-                SqlKeyConstraint constraint = (SqlKeyConstraint) c.e;
+            } else if ( c.e instanceof SqlKeyConstraint constraint ) {
                 String constraintName = constraint.getName() != null ? constraint.getName().getSimple() : null;
 
-                ConstraintInformation ci = new ConstraintInformation(
-                        constraintName,
-                        constraint.getConstraintType(),
-                        constraint.getColumnList().getSqlList().stream()
-                                .map( SqlNode::toString )
-                                .collect( Collectors.toList() )
-                );
-                constraintInformation.add( ci );
+                constraintInformation.add( getConstraintInformation( constraintName, constraint ) );
             } else {
                 throw new AssertionError( c.e.getClass() );
             }
@@ -324,5 +306,25 @@ public class SqlCreateTable extends SqlCreate implements ExecutableStatement {
     }
 
 
-}
+    @NotNull
+    private ConstraintInformation getConstraintInformation( String constraintName, SqlKeyConstraint constraint ) {
+        return switch ( constraint.getConstraintType() ) {
+            case PRIMARY, UNIQUE -> new ConstraintInformation(
+                    constraintName,
+                    constraint.getConstraintType(),
+                    constraint.getFields().getSqlList().stream()
+                            .map( SqlNode::toString )
+                            .collect( Collectors.toList() ) );
+            case FOREIGN -> new ConstraintInformation(
+                    constraintName,
+                    constraint.getConstraintType(),
+                    constraint.getFields().getSqlList().stream()
+                            .map( SqlNode::toString )
+                            .collect( Collectors.toList() ),
+                    ((SqlForeignKeyConstraint) constraint).getReferencedEntity().toString(),
+                    ((SqlForeignKeyConstraint) constraint).getReferencedField().toString() );
+        };
+    }
 
+
+}
