@@ -1,5 +1,5 @@
 /*
- * Copyright 2019-2023 The Polypheny Project
+ * Copyright 2019-2024 The Polypheny Project
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,29 +17,23 @@
 package org.polypheny.db.sql.language.ddl.altertable;
 
 
-import static org.polypheny.db.util.Static.RESOURCE;
-
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
-import org.polypheny.db.catalog.Catalog.EntityType;
-import org.polypheny.db.catalog.Catalog.ForeignKeyOption;
-import org.polypheny.db.catalog.entity.CatalogTable;
-import org.polypheny.db.catalog.exceptions.GenericCatalogException;
-import org.polypheny.db.catalog.exceptions.UnknownColumnException;
-import org.polypheny.db.catalog.exceptions.UnknownForeignKeyOptionException;
+import org.polypheny.db.catalog.entity.logical.LogicalTable;
+import org.polypheny.db.catalog.exceptions.GenericRuntimeException;
+import org.polypheny.db.catalog.logistic.EntityType;
+import org.polypheny.db.catalog.logistic.ForeignKeyOption;
 import org.polypheny.db.ddl.DdlManager;
 import org.polypheny.db.languages.ParserPos;
-import org.polypheny.db.languages.QueryParameters;
 import org.polypheny.db.nodes.Node;
 import org.polypheny.db.prepare.Context;
+import org.polypheny.db.processing.QueryContext.ParsedQueryContext;
 import org.polypheny.db.sql.language.SqlIdentifier;
 import org.polypheny.db.sql.language.SqlNode;
 import org.polypheny.db.sql.language.SqlNodeList;
 import org.polypheny.db.sql.language.SqlWriter;
 import org.polypheny.db.sql.language.ddl.SqlAlterTable;
 import org.polypheny.db.transaction.Statement;
-import org.polypheny.db.util.CoreUtil;
 import org.polypheny.db.util.ImmutableNullableList;
 
 
@@ -64,12 +58,9 @@ public class SqlAlterTableAddForeignKey extends SqlAlterTable {
         this.columnList = Objects.requireNonNull( columnList );
         this.referencesTable = Objects.requireNonNull( referencesTable );
         this.referencesList = Objects.requireNonNull( referencesList );
-        try {
-            this.onUpdate = onUpdate != null ? ForeignKeyOption.parse( onUpdate ) : ForeignKeyOption.RESTRICT;
-            this.onDelete = onDelete != null ? ForeignKeyOption.parse( onDelete ) : ForeignKeyOption.RESTRICT;
-        } catch ( UnknownForeignKeyOptionException e ) {
-            throw new RuntimeException( e );
-        }
+        this.onUpdate = onUpdate != null ? ForeignKeyOption.parse( onUpdate ) : ForeignKeyOption.RESTRICT;
+        this.onDelete = onDelete != null ? ForeignKeyOption.parse( onDelete ) : ForeignKeyOption.RESTRICT;
+
     }
 
 
@@ -108,31 +99,27 @@ public class SqlAlterTableAddForeignKey extends SqlAlterTable {
 
 
     @Override
-    public void execute( Context context, Statement statement, QueryParameters parameters ) {
-        CatalogTable catalogTable = getCatalogTable( context, table );
-        CatalogTable refTable = getCatalogTable( context, referencesTable );
+    public void execute( Context context, Statement statement, ParsedQueryContext parsedQueryContext ) {
+        LogicalTable logicalTable = getTableFailOnEmpty( context, table );
+        LogicalTable refTable = getTableFailOnEmpty( context, referencesTable );
 
-        // Make sure that this is a table of type TABLE (and not SOURCE)
-        if ( catalogTable.entityType != EntityType.ENTITY ) {
-            throw CoreUtil.newContextException( table.getPos(), RESOURCE.ddlOnSourceTable() );
+        if ( logicalTable.entityType != EntityType.ENTITY ) {
+            throw new GenericRuntimeException( "Entity " + logicalTable.getNamespaceName() + "." + logicalTable.getName() + " is not an entity, which can used for constraints." );
         }
+
         if ( refTable.entityType != EntityType.ENTITY ) {
-            throw CoreUtil.newContextException( referencesTable.getPos(), RESOURCE.ddlOnSourceTable() );
+            throw new GenericRuntimeException( "Entity " + refTable.getNamespaceName() + "." + refTable.getName() + " is not an entity, which can used for constraints." );
         }
-        try {
-            DdlManager.getInstance().addForeignKey(
-                    catalogTable,
-                    refTable,
-                    columnList.getList().stream().map( Node::toString ).collect( Collectors.toList() ),
-                    referencesList.getList().stream().map( Node::toString ).collect( Collectors.toList() ),
-                    constraintName.getSimple(),
-                    onUpdate,
-                    onDelete );
-        } catch ( UnknownColumnException e ) {
-            throw CoreUtil.newContextException( columnList.getPos(), RESOURCE.columnNotFound( e.getColumnName() ) );
-        } catch ( GenericCatalogException e ) {
-            throw new RuntimeException( e );
-        }
+
+        DdlManager.getInstance().createForeignKey(
+                logicalTable,
+                refTable,
+                columnList.getList().stream().map( Node::toString ).toList(),
+                referencesList.getList().stream().map( Node::toString ).toList(),
+                constraintName.getSimple(),
+                onUpdate,
+                onDelete );
+
     }
 
 }
